블로그 마무리 단계

--- a/index.html
+++ b/index.html
@@ -132,9 +132,18 @@
 
         <H4>파이썬</H4>
         <p> <a href="./study/study_0071.html">0071. 파이썬</a> </p>
+        <p> <a href="./study/study_0072.html">0072. 비전공자를 위한 첫 코딩 챌린지</a> </p>
 
         <H4>Github</H4>
-        <p> <a href="./study/study_0081.html">0081. Github</a> </p>
+        <p> <a href="./study/study_0081.html">0081. git / github</a> </p>
+        <p> <a href="./study/study_0082.html">0082. Git / GitHub 첫 사용하기</a> </p>
+        <p> <a href="./study/study_0083.html">0083. 웹호스팅</a> </p>
+        <p> <a href="./study/study_0084.html">0084. Git 통합중 : 삭제 예정</a> </p>
+        <p> <a href="./study/study_0085.html">0085. Git Study : 0.빠른 실습</a> </p>
+        <p> <a href="./study/study_0086.html">0086. Git Study : 1. ~ (작성중)</a> </p>
+        <p> <a href="./study/study_0087.html">0087. Git Study : 6. 기본 명령어 CLI</a> </p>
+        <p> <a href="./study/study_0088.html">0088. Git Study : 7. 브랜치 CLI</a> </p>
+        <p> <a href="./study/study_0089.html">0089. Git File</a> </p>
 
     </div>
 
