마무리 & 노래1개 추가

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
         <p> <a href="./etc/etc_9003.html">9003. FP</a> </p>
         <p> <a href="./etc/etc_9004.html">9004. KUDU</a> </p>
         <p> <a href="./etc/etc_9005.html">9005. P2E</a> </p>
+        <p> <a href="./etc/etc_9006.html">9006. 개인정보</a> </p>
         
     </div>
 
