--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <p> <a href="./my/my_0300.html">0300. 10분 요리</a> </p>
         <p> <a href="./my/my_0400.html">0400. MY BLOG</a> </p>
         <p> <a href="./my/my_0500.html">0500. 국어사전</a> </p>
+        <p> <a href="./my/my_9998.html">9998. 무작정 경제 정리</a> </p>
+        <p> <a href="./my/my_9999.html">9999. 무작정 경제 정리</a> </p>
         
     </div>
 
