--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <div> 
         <h3>MY</h3>
+        <p> <a href="https://openai.com/blog/chatgpt/"챗GPT</a> </p>
+        <br>
+         
         <p> <a href="./my/my_0100.html">0100. MY 금융</a> </p>
         <p> <a href="./my/my_0110.html">0110. 금융</a> </p>
         <p> <a href="./my/my_0120.html">0120. 부동산</a> </p>
@@ -19,7 +22,7 @@
         <p> <a href="./my/my_0300.html">0300. 10분 요리</a> </p>
         <p> <a href="./my/my_0400.html">0400. MY BLOG</a> </p>
         <p> <a href="./my/my_0500.html">0500. 국어사전</a> </p>
-        <p> <a href="./my/my_9998.html">9998. 무작정 경제 정리</a> </p>
+        <p> <a href="./my/my_9998.html">9998. 무작정 기타 정리</a> </p>
         <p> <a href="./my/my_9999.html">9999. 무작정 경제 정리</a> </p>
         
     </div>
