--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div> 
         <h3>MY</h3>
-        <p> <a href="https://openai.com/blog/chatgpt/"챗GPT</a> </p>
+        <p> <a href="https://openai.com/blog/chatgpt/">챗GPT</a> </p>
         <br>
          
         <p> <a href="./my/my_0100.html">0100. MY 금융</a> </p>
