--- a/office/office_0001.html
+++ b/office/office_0001.html
@@ -104,6 +104,7 @@
 <p>. 수식이 들어 있는 셀 범위 지정 - 우클릭 - 셀서식 - [보호]탑 - 잠금, 숨김 ㅞ크 - 확인</p>
 <p>. [도구]-[보호]-[시트보호] '워크시트에서 허용할 내용', 잠긴셀 선택, 잠기지 않은 셀 선택 체크</p>
 <p>Tip [시트보호] 대화상자에서 [시트보호 해제암호]항목을 이용하여 암호를 지정하면 [도구]-[보호]-[시트보호해제] 메뉴를 실행할 때 암호를 입력해야 한다.</p>
+<p>Tip 셀보호하니깐, 매크로에서 오류남 : <strong>셀보호로 매크로에서 입력한 값 변경이 안됨</strong></p>
 
         
         
