금융 기타 등

--- a/my/my_0200.html
+++ b/my/my_0200.html
@@ -41,6 +41,11 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="노래">노래</h1>
+<h2 id="유튜브-반복재생">유튜브 반복재생</h2>
+<ul>
+<li>재생중  -  마우스 오른쪽 버튼  -  연속 재생 체크</li>
+</ul>
+<br>
 <p>[헤어질 결심 OST] 정훈희 &amp; 송창식 - 안개</p>
 <p><a href="https://www.youtube.com/watch?v=gpi6jrdgK3A">https://www.youtube.com/watch?v=gpi6jrdgK3A</a></p>
 <br>
