--- a/office/office_0008.html
+++ b/office/office_0008.html
@@ -47,6 +47,32 @@
 <li><a href="./office_0008.html">엑셀 수식</a></li>
 </ul>
 <br>
+<h2 id="230321-매크로"><strong>23.03.21 매크로</strong></h2>
+<h3 id="1-매크로-삭제">1. 매크로 삭제</h3>
+<ul>
+<li>
+<p>매크로 소스 보기 : <strong>Alt + F11</strong></p>
+</li>
+<li>
+<p>매크로 삭제 : 트리 구조에서 마우스 오른쪽 버튼 - 삭제</p>
+</li>
+<li>
+<p>도구 - VBAProject 속성</p>
+<ul>
+<li>읽기전용 체크 : 소스 안보이게 패스워드 확인함</li>
+<li>프로젝트 속성보기 암호 : 별루, 말그대로임, 프로젝트 속성볼 때 패스워드 묻는 것으로 이것만하면 매크로 수정 가능</li>
+</ul>
+<p><img src="./img/f0008.JPG" alt="매크로 VBA속성"></p>
+<p><img src="./img/f0008_2.JPG" alt="매크로 RD"></p>
+</li>
+</ul>
+<h3 id="2-매크로-만들기-007">2. 매크로 만들기 (007)</h3>
+<ul>
+<li>보기 - 매크로 - 매크로 기억 [매크로명, 단축키(ctrl+영문자) ]</li>
+<li>잡다한 작업들,,,</li>
+<li>보기 - 매크로 - 매크로 종료</li>
+</ul>
+<br>
 <h2 id="012-그룹-묶음처리--숨김처리-22-01-29"><strong>012. 그룹 (묶음처리 : 숨김처리) (22. 01. 29)</strong></h2>
 <p>. 데이터 - 그룹  (선택하면 만들면, 그 다음 줄(열)에 ± 버튼이 생김</p>
 <br>
@@ -62,11 +88,6 @@
 <h2 id="009-offset-20-11-10"><strong>009. offset (20. 11. 10)</strong></h2>
 <p>. 지정한 위치에서 이동</p>
 <p>. offset(영역, row, col)</p>
-<br>
-<h2 id="007-매크로-만들기"><strong>007. 매크로 만들기</strong></h2>
-<p>. 보기 - 매크로 - 매크로 기억 [매크로명, 단축키(ctrl+영문자) ]</p>
-<p>. 잡다한 작업들,,,</p>
-<p>. 보기 - 매크로 - 매크로 종료</p>
 <br>
 <h2 id="006-조건부서식--조건절-추가"><strong>006. 조건부서식 : 조건절 추가</strong></h2>
 <p>. =OR($A2=&quot;X&quot;) : A2셀이 &quot;X&quot;인 경우 조건부서식 적용</p>
