--- a/my/my_9999.html
+++ b/my/my_9999.html
@@ -42,7 +42,42 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="무작정-경제-정리">무작정 경제 정리</h1>
-<h2 id="버블">버블</h2>
+<h2 id="금융위기-최용식-정책당국">금융위기 (#최용식, #정책당국)</h2>
+<p><strong>경제병리학</strong></p>
+<p>그 때와 다르게 <strong>정책 당국</strong>에서 시의적절하게 대응하고 있다</p>
+<p>SVB 등</p>
+<ul>
+<li>본원통화 6% 자산동결 (3340억$)</li>
+<li>전액보장 말했지만, 아직 인출가능하지 않음. 예금보험공사 보증한 금액만 인출 가능</li>
+<li>신용파괴 효과 &lt;--&gt; 신용창조 효과</li>
+<li>신용창조효과만 받아들임 (자본주의 옹호 위해)</li>
+</ul>
+<p>1930년대 오스트리아 2대 은행이 1대 은행에 합병</p>
+<ul>
+<li>CS가 USB에 합병</li>
+<li>대공황때 망함</li>
+</ul>
+<p>미국 딜레마</p>
+<ul>
+<li>금리상승 - 금융업약화, 침체 (장기)</li>
+<li>약달러 - 환차손, 자본이탈 (단기)</li>
+</ul>
+<p>어떤 일들이 일어나고, 시장이 어떻게 나올지는 아무도 모른다</p>
+<p>22년~23년</p>
+<ul>
+<li>금리보다 낮은 금리 인상, 미국으로 돈이 빠져 나감, 유동성 수축효과</li>
+</ul>
+<p>유럽</p>
+<ul>
+<li>CS위기상황에서도 0.5% 금리 인상</li>
+</ul>
+<p>중국</p>
+<ul>
+<li>1조7천억$ 모두 부실화(?) (일대일로 투자액+통화스왑)</li>
+<li>통계조작 (?)</li>
+</ul>
+<br>
+<h2 id="버블-국채위기">버블 (#국채위기)</h2>
 <p>국채에서 가장 버블이 많다.</p>
 <p>일본 YCC 종료시 미국, 호주, 프랑스 등 국채 문제 가능</p>
 <p>미국 : 개인 부채 줄었다. 100 -&gt; 80,  변동금리 40% -&gt; 16%</p>
@@ -54,7 +89,7 @@
 <p>'22.10 영국사태시 미국채 유동성 문제 있는 것 확인</p>
 <p>4% 넘어가니깐 문제가 발생하네,,,</p>
 <br>
-<h2 id="토지의-통화-창출">토지의 통화 창출</h2>
+<h2 id="토지의-통화-창출-부동산">토지의 통화 창출 (#부동산)</h2>
 <ul>
 <li>미국 : 23조<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo stretchy="false">(</mo><mi>G</mi><mi>D</mi><mi>P</mi><mo stretchy="false">)</mo><mi mathvariant="normal">/</mi><mn>35</mn><mtext>조</mtext></mrow><annotation encoding="application/x-tex"> (GDP) / 35조</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">G</span><span class="mord mathnormal" style="margin-right:0.02778em;">D</span><span class="mord mathnormal" style="margin-right:0.13889em;">P</span><span class="mclose">)</span><span class="mord">/35</span><span class="mord hangul_fallback">조</span></span></span></span> (부동산총액)</li>
 <li>중국 : 17조<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo stretchy="false">(</mo><mi>G</mi><mi>D</mi><mi>P</mi><mo stretchy="false">)</mo><mi mathvariant="normal">/</mi><mn>61</mn><mtext>조</mtext></mrow><annotation encoding="application/x-tex"> (GDP) / 61조</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">G</span><span class="mord mathnormal" style="margin-right:0.02778em;">D</span><span class="mord mathnormal" style="margin-right:0.13889em;">P</span><span class="mclose">)</span><span class="mord">/61</span><span class="mord hangul_fallback">조</span></span></span></span> (부동산총액)</li>
@@ -62,33 +97,29 @@
 </ul>
 <p>경제는 기대와 심리 : 부동산 1위 업체가 무너지면 안됨, 명맥만 유지중</p>
 <br>
-<h2 id="플라자합의-이후-일본-19851989">플라자합의 이후 일본 (1985~1989)</h2>
+<h2 id="플라자합의-이후-일본-19851989-일본-버블">플라자합의 이후 일본 (1985~1989) (#일본, #버블)</h2>
 <ul>
 <li>투금계정 : 9조엔 -&gt; 40조엔</li>
 <li>집값 : 4배뜀</li>
 <li>NTT의 시총금액이 서독 전체 시총의 70%</li>
 </ul>
 <br> 
-<h2 id="중국-부실---자산관리공사---중앙은행에서-돈-빌려줌">중국 부실 -&gt; 자산관리공사 -&gt; 중앙은행에서 돈 빌려줌</h2>
+<h2 id="중국-부실---자산관리공사---중앙은행에서-돈-빌려줌-중국">중국 부실 -&gt; 자산관리공사 -&gt; 중앙은행에서 돈 빌려줌 (#중국)</h2>
 <p>돈의 소각으로 부실 정리 예상</p>
 <br> 
-<h2 id="be-a-risk-taker"><strong>BE a Risk taker</strong></h2>
+<h2 id="be-a-risk-taker--투자-risk"><strong>BE a Risk taker</strong>  (#투자, #RISK)</h2>
 <p>주식은 Risk를 안고서 조금씩 사 가는 거다</p>
 <p>기업의 부는 증가하지만, 노동자는?  (자본을 가지자 : <strong>주식투자</strong>)</p>
 <br> 
-<h2 id="23년-경제전망--상고하저로-예상">'23년 경제전망 : 상고하저로 예상</h2>
-<p>올해 하반기 재정공백 상태 예상</p>
-<p>찐링 (중국 애널)</p>
-<br> 
-<h2 id="인도-아다니-그룹">인도 아다니 그룹</h2>
+<h2 id="인도-아다니-그룹-인도">인도 아다니 그룹 (#인도)</h2>
 <p>힌델버그 리포트 (니콜라 얘기했던 곳)</p>
 <p>공매도 세력</p>
 <p>정치권과 유착을 통한 민영화</p>
 <br> 
-<h2 id="한국-증권사">한국 증권사</h2>
+<h2 id="한국-증권사-증권사">한국 증권사 (#증권사)</h2>
 <p>온라인 증권사 수수료 Zero화 ==&gt; 이자 수입으로 대체, PF투자</p>
 <br> 
-<h2 id="아세안">아세안</h2>
+<h2 id="아세안-아세안">아세안 (#아세안)</h2>
 <p>평균 연령 낮다 -&gt; 지속적 성장 가능</p>
 <p>젊은 세대들이 많아서 트랜드 읽기 좋음</p>
 <p>10개국가 다양성 추구 : EU보다 통합되기 어렵다. 바다로 갈라져 있음</p>
