--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <h3>Office</h3>
         <p> <a href="./office/office_0001.html">0001. 엑셀 셀</a> </p>
         <p> <a href="./office/office_0008.html">0008. 엑셀 수식</a> </p>
-        
+        <br>
+
         <p> <a href="./office/office_0002.html">0002. HWP</a> </p>
         <p> <a href="./office/office_0003.html">0003. 3벌식</a> </p>
         <p> <a href="./office/office_0004.html">0004. 파워포인트</a> </p>
@@ -64,8 +65,10 @@
     <div> 
         <h3>STUDY</h3>
         <H4>DASP 준비</H4>
-        <p> <a href="./study/study_0101.html">0101. 1. 23년 시험일정</a> </p>
-
+        <p> <a href="./study/study_0101.html">0101. 23년 시험일정</a> </p>
+        <p> <a href="./study/study_0102.html">0102. 1-1 전사아키텍처 개요</a> </p>
+        <br>
+        
         <H4>22.06.25 SW자산관리사</H4>
         <p> <a href="./study/study_0001.html">0001. 0.소프트웨어 자산관리사 개괄 (SW자산관리사)</a> </p>
         <p> <a href="./study/study_0002.html">0002. 0.1 SW백문백답 (SW자산관리사)</a> </p>
