--- a/study/study_0101.html
+++ b/study/study_0101.html
@@ -43,7 +43,27 @@
         <h1 id="dasp-23년-시험일정">DASP 23년 시험일정</h1>
 <p><img src="./img/s0101.JPG" alt="23년 시험일정"></p>
 <br>
-<p>준비합시당</p>
+<ol>
+<li>
+<p>전사아키텍처 이행</p>
+</li>
+<li>
+<p>데이터 품질 관리 이해</p>
+</li>
+<li>
+<p>데이터 요건 분석</p>
+</li>
+<li>
+<p>데이터 표준화</p>
+</li>
+<li>
+<p>데이터 모델링</p>
+</li>
+<li>
+<p>데이터베이스 설계와 이용</p>
+</li>
+</ol>
+<p><a href="https://www.youtube.com/watch?v=vCr6Frmritg&amp;list=PLQvqXcm97CTCa3KE90z0rhBQKlxpNhzCG">챗GPT에 모든 걸 맡기면 안 되는 이유 : 3PRO TV, 조봉한 깨봉수학 대표</a></p>
 
         
         
