--- a/study/study_0102.html
+++ b/study/study_0102.html
@@ -42,16 +42,16 @@
     <body class="vscode-body vscode-light">
         <h1 id="1-1-전사아키텍처-개요">1-1 전사아키텍처 개요</h1>
 <p><a href="./file/%EC%95%8C%EA%B8%B0%EC%89%AC%EC%9A%B4%20EA.pdf">알기쉬운 EA.pdf (한국정보화진흥원)</a></p>
-<p>[범정부 EA포털, GEAP] <a href="https://www.geap.go.kr/real/">https://www.geap.go.kr/real/</a></p>
+<p><a href="https://www.geap.go.kr/real/">범정부 EA포털, GEAP</a></p>
 <br>
 <h3 id="가-전사아키텍처-정의">가. 전사아키텍처 정의</h3>
-<p>전사아키텍처 : 기업의전체 시스템을 쉽게 파악할 수 있게 만든 것</p>
+<p>전사아키텍처 : 기업의 전체 시스템을 쉽게 파악할 수 있게 만든 것</p>
 <p>미국 ???</p>
 <p>전사 : 공동의 목표를 가진 조직의 집합체  /  하나의 기업일 수도 있고 아닐 수도 있고  /  전사의 범위를 사전에 정의 필요</p>
-<p>구성요소 : 규칙(관리적문제),  모델(표기법),  계획(궁극적 지향)\</p>
+<p>구성요소 : 규칙(관리적문제),  모델(표기법),  계획(궁극적 지향)</p>
 <br>
 <h3 id="나-전사아키텍처-프레임워크">나. 전사아키텍처 프레임워크</h3>
-<p>프레이워크 : 산출물을 분류하고 조직화하고 이를 유지 관리하기 위한 전체적인 틀 (참조모델 활용)</p>
+<p>프레임워크 : 산출물을 분류하고 조직화하고 이를 유지 관리하기 위한 전체적인 틀 (참조모델 활용)</p>
 <p>집구조</p>
 <ul>
 <li>정책 : 아키텍처 매트릭스(View/Perspective), EA비전, EA원칙</li>
@@ -65,7 +65,31 @@
 <p>산업군별, 아키텍처별 참조모델</p>
 <p>범정부 참조모델</p>
 <br>
-<h3 id="라-전사아키텍처-프레세스">라. 전사아키텍처 프레세스</h3>
+<h3 id="라-전사아키텍처-프로세스">라. 전사아키텍처 프로세스</h3>
+<br>
+<h3 id="-기타-정리">#. 기타 정리</h3>
+<p>아키텍처 : 정보화 추진을 위한 설계도</p>
+<p>정보화 생명주기</p>
+<ul>
+<li>비전/전략 -&gt; 아키텍처 수립 -&gt; IT투자계획 -&gt; 시스템구현 -&gt; 전략적성과</li>
+</ul>
+<p>EA : 종합 설계도</p>
+<ul>
+<li>
+<p>정보화 구성요소 및 상호간의 관계 : 4개의 구성요소</p>
+</li>
+<li>
+<p>정보화를 체계적으로 추진하기 위한</p>
+</li>
+</ul>
+<p>프레임워크</p>
+<ul>
+<li>거버넌스</li>
+<li>아키텍처 수립</li>
+<li>현행 -&gt; 이행계획 -&gt; 목표</li>
+<li>관리도구</li>
+</ul>
+<p>원침, 기준/지침, 추진체계, 절차</p>
 
         
         
