--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <H4>DASP 준비</H4>
         <p> <a href="./study/study_0101.html">0101. 23년 시험일정</a> </p>
         <p> <a href="./study/study_0102.html">0102. 1-1 전사아키텍처 개요</a> </p>
+        <p> <a href="./study/study_0103.html">0103. 1-2 전사아키텍처 구축</a> </p>
+        <p> <a href="./study/study_0104.html">0104. 1-3 전사아키텍처 관리 및 활용</a> </p>
         <br>
         
         <H4>22.06.25 SW자산관리사</H4>
