--- a/study/study_0052.html
+++ b/study/study_0052.html
@@ -41,6 +41,8 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="vsc">VSC</h1>
+<h2 id="230402-맥--vsc--github">(23.04.02) 맥 : VSC &amp; github</h2>
+<p>간만에 맥에서 작업하려니 안되네, 맥OS 업그레이드 이후 사라진듯, git 새로 설치이후 설정함</p>
 <h2 id="1-컬럼단위-글쓰기">1. 컬럼단위 글쓰기</h2>
 <p>Ctrl + Alt + 화살표 위 또는 아래</p>
 <br>
@@ -57,9 +59,9 @@
 . HTML Snipper : &lt;&gt; 없어도 태그 완성 : 꺽쇠 없이 div 후 엔터키
 . Live Server : 자동 저장 기능
 . Material Icon Theme : 언어별 아이콘 부여
-. Prettier : 코드 배치 이쁘게
+. Prettier : 코드 배치 이쁘게  
 </code></pre>
-<p><img src="img/s0052.jpg" alt="마켓플레이스"></p>
+<p><img src="file:////Users/sk/MY/new2/new2/study/img/s0052.JPG" alt="마켓플레이스"></p>
 <h3 id="31-korean-languange-pack-for-visual-studio-code">3.1 Korean Languange Pack for Visual Studio Code</h3>
 <ul>
 <li>메뉴를 한글로 표시함</li>
@@ -69,6 +71,9 @@
 <li>Alt + B : html 내역을 브라우저에서 오픈</li>
 </ul>
 <h3 id="33-markdown-all-in-one">3.3 Markdown All in One</h3>
+<ul>
+<li>Markdown 문서 자동으로 html 문서로 변경해 줌</li>
+</ul>
 <br>
 <h2 id="3-화면-설명">3. 화면 설명</h2>
 <pre><code>탐색기
@@ -79,7 +84,7 @@
 </code></pre>
 <br>
 <h2 id="4-소스관리--git">4. 소스관리 / Git</h2>
-<p><img src="img/s0052_1.png" alt="소스관리"></p>
+<p><img src="file:////Users/sk/MY/new2/new2/study/img/s0052_1.png" alt="소스관리"></p>
 <ol>
 <li>
 <p>Refresh : 소스제어에서 어떤 것들이 바뀌었는지 확인</p>
@@ -97,7 +102,7 @@
 <br>
 <h2 id="5-색테마">5. 색테마</h2>
 <p>파일 - 기본설정 - 색테마</p>
-<p><img src="img/s0052_2.png" alt="색테마"></p>
+<p><img src="file:////Users/sk/MY/new2/new2/study/img/s0052_2.png" alt="색테마"></p>
 
         
         
