집에서 추가 보완

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p> <a href="./my/my_0110.html">0110. 금융</a> </p>
         <p> <a href="./my/my_0120.html">0120. 부동산</a> </p>
         <p> <a href="./my/my_0130.html">0130. 투자</a> </p>
+        <p> <a href="./my/my_9997.html">9997. 투자원칙</a> </p>
         
         <p> <a href="./my/my_0200.html">0200. 노래</a> </p>
         <p> <a href="./my/my_0300.html">0300. 10분 요리</a> </p>
