--- a/my/my_9999.html
+++ b/my/my_9999.html
@@ -42,6 +42,13 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="무작정-경제-정리">무작정 경제 정리</h1>
+<h2 id="선진국-은행-사태">선진국 은행 사태</h2>
+<p>전세계 은행이 촘촘히 연결되어 있음</p>
+<p>선진국보다 비선진국에서 추가적인 위기 가능성 있음</p>
+<p>CS 발행 영구채 : HSBC 많이 발행했고 유로존 3000억$ 발행</p>
+<p>부채비율 높은 은행/기업 위험</p>
+<p>시중자금이 단기 유동화 되어 있음</p>
+<br>
 <h2 id="금융위기-최용식-정책당국">금융위기 (#최용식, #정책당국)</h2>
 <p><strong>경제병리학</strong></p>
 <p>그 때와 다르게 <strong>정책 당국</strong>에서 시의적절하게 대응하고 있다</p>
@@ -76,6 +83,11 @@
 <li>1조7천억$ 모두 부실화(?) (일대일로 투자액+통화스왑)</li>
 <li>통계조작 (?)</li>
 </ul>
+<br>
+<h2 id="미국-국채">미국 국채</h2>
+<p>미국 개인 자산이 주식에 많이 있기 때문에 주가 하락 가만히 두기 어려움</p>
+<p>중국, 사우디가 미국 국채 사는 것 주저함</p>
+<p>FED가 30% 가지고 있음</p>
 <br>
 <h2 id="버블-국채위기">버블 (#국채위기)</h2>
 <p>국채에서 가장 버블이 많다.</p>
