--- a/office/office_0006.html
+++ b/office/office_0006.html
@@ -42,8 +42,8 @@
     <body class="vscode-body vscode-light">
         <h1 id="원도우">원도우</h1>
 <h2 id="탐색기-특정-날짜-검색">탐색기 특정 날짜 검색</h2>
-<p>검색 상태에서 날짜 선택후 오른쪽 내용에서 부등호로 특정날짜 이후/이전 내역 찾기 가능
-<img src="img/f0006_1.jpg" alt="메롱"></p>
+<p>검색 상태에서 날짜 선택후 오른쪽 내용에서 부등호로 특정날짜 이후/이전 내역 찾기 가능</p>
+<p><img src="img/f0006_1.jpg" alt="메롱"></p>
 <br>
 <h2 id="원도우-버전-winver">원도우 버전 (winver)</h2>
 <p>명령어(cmd) 창에서 winver 실행</p>
