--- a/study/study_0105.html
+++ b/study/study_0105.html
@@ -109,35 +109,96 @@
 <li>인덱스 생성 필요</li>
 </ul>
 <br>
-<h3 id="다-전사아키텍처-활용"><strong>다. 전사아키텍처 활용</strong></h3>
-<p>이렇게 활용하세요.</p>
+<h3 id="다-인덱스-설계"><strong>다. 인덱스 설계</strong></h3>
+<p>인덱스는 데이터를 좀 더 빠르게 접근하는 것.</p>
 <br>
-<p>목표아키텍처 이행 계획 (1/2)</p>
+<p>PK, UK, FK : 무결성 검증 위해 인덱스 필요</p>
+<p>인덱스 설계</p>
 <ul>
-<li>정의된 프로젝트들 간의 유사성과 상호연관성을 고려하여 우선순위 결정</li>
-<li>주요활동 및 작업 : 아키텍처 차이 분석, 프로젝트 정의, 이행 전략 수립, 이행 계획 수립, 변화관리 계획 수립</li>
-</ul>
-<p>정보 상시 활용 (2/2)</p>
+<li>접근 경로 수집
 <ul>
-<li>IT 기획 관리 :
-<ul>
-<li>(단기, 중기) 정보화 계획 수립, 전략 방향에 맞는 목표 시스템을 정의하고 추진 계획 수립,</li>
-<li>IT 투자에 대한 포토폴리오 관리</li>
+<li>반복 수행 경로, 분포도 양호한 것, 조회조건, 자주결합, 정렬순서, 그룹핑컬럼, 일련번호, 통계, 조인조건</li>
 </ul>
 </li>
-<li>IT 구축 관리 : 프로젝트 계획, 시스템 개발</li>
-<li>IT 운영/통제 관리
+<li>분포도 조사에 의한 후보 컬럼 선정 : 단일 컬럼 우선 선정
 <ul>
-<li>프레임워크 및 매트릭스 변경할 수도, 성숙도 높아질수록 요구사항도 높아짐</li>
-<li>정보의 품질 보장, 전담 조직을 통한 운영, 활용 위한 절차 및 시스템 필요</li>
+<li>분포도 = 데이터별 평균 로우수 / 테이블 총 로우수</li>
 </ul>
 </li>
-</ul>
-<p>DAP와 다른 아키텍트와의 관계 (추가)</p>
+<li>접근 경로 결정</li>
+<li>컬럼 조합 및 순서 결정
 <ul>
-<li>범위통합 : 모델 내의 불일치성 제거</li>
-<li>수평통합 : 관련된 다른 영역과의 불일치성 제거</li>
-<li>수직통합 : 요구사항에 대한 일치 정렬(Alignment) 개념과 연관</li>
+<li>항상 사용, 등치(=), 분포도 좋은 것, order/group by</li>
+</ul>
+</li>
+<li>적용 시험 : 의도된 실행계획으로 작동되는지, 다른 SQL문 영향도도 확인 필요</li>
+</ul>
+<p>인덱스 구조</p>
+<ul>
+<li>B트리 : 입력/수정/삭제 용이함, 스캔범위 넓으면 랜덤 IO 발생</li>
+<li>비트맵 : 대량데이터, 분포도 낮을때, 비트 연산, 입력/수정/삭제 어려움</li>
+</ul>
+<br>
+<h3 id="라-분산-설계"><strong>라. 분산 설계</strong></h3>
+<p>데이터통합이 더 낫겠네</p>
+<br>
+<p>논리적으로 연관된 데이터베이스 (물리적으로 분산)</p>
+<ul>
+<li>장점 : 원격 데이터에 대한 의존도 감소, 서버 추가해 점진적 증가 용이</li>
+<li>단점 : 분산처리로 인한도 복잡도 증가, 개발 비용 증가, 통제 기능 취약, 오류 발생 가능성</li>
+</ul>
+<p>설계 목표 : 논리적으로 하나의 데이터 모델을 제공하기 위해 <strong>투명성</strong> 요구됨</p>
+<ul>
+<li>분할 투명성 : 수직 또는 수평 분할</li>
+<li>위치 투명성 : 설계된 테이블의 위치를 각각 다르게</li>
+<li>중복 투명성 : 여러 사이트에 중복 가능, 갱신 전파 오버로드 필요</li>
+<li>장해 투명성 : 장해에 무관한 트랜잭션의 원자성 유지</li>
+<li>병행 투명성 : 결과의 일관성, 2PC(Two Phase Commit)</li>
+</ul>
+<p>설계 방식</p>
+<ul>
+<li>테이블 위치 분산 : 전역적으로 중복 안되게 위치 분산하여 저장</li>
+<li>테이블 분할 분산 : 완전성, 재구성, 소호중첩배제, 수평분할/수직분할</li>
+<li>테이블 복제 분산 : 부분 또는 광역 복제</li>
+</ul>
+<p>데이터 통합</p>
+<ul>
+<li>데이터 통합이라는 관점에서 분산 아키텍처 단점 보완 : DW, EAI</li>
+</ul>
+<br>
+<h3 id="마-보안-설계"><strong>마. 보안 설계</strong></h3>
+<p>누가, 어느 데이터에 대해, 무슨 연산을 수행할 있도록 허락 받았는가?</p>
+<br>
+<ul>
+<li>사용자식별 : 사용자, 비밀번호, 사용자그룹</li>
+<li>보안 규칙, 권한 규칙</li>
+<li>접근에 대한 보안 규칙 검사</li>
+</ul>
+<p>사용자 식별 인증</p>
+<ul>
+<li>필요시 이중인증, 사용자별 유일한 식별자</li>
+</ul>
+<p>접근 통제</p>
+<ul>
+<li>신분(직급), 역할(직무), 위치, 시간</li>
+<li>서비스 제한, 패스워드, 암호화, 접근통제 목록, 제한된 사용자 인터페이스, 보안 등급</li>
+</ul>
+<p>감사 추적</p>
+<ul>
+<li>사용자 활동 기록</li>
+</ul>
+<p>데이터 접근 통제 모델</p>
+<ul>
+<li>접근 제어 매트릭스 (주체, 객체Object, 규칙CRUD)</li>
+</ul>
+<p>데이터 접근 제어 유형</p>
+<ul>
+<li>값 비종속 규칙(모두 접근 가능), 값 종속(해당 부서 내역만), 의미 종속(특정 시간대)</li>
+</ul>
+<p>데이터 접근 제어 기법</p>
+<ul>
+<li>임의통제(DAC) : 권한 위임 가능, 1단계:수평전파, 2단계이상:수직전파</li>
+<li>강제통제(MAC) : 객체에 보안 등급 부여, 사용자마다 인가된 등급에 따라 접근 가능</li>
 </ul>
 
         
