--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <p> <a href="./study/study_0103.html">0103. 1-2 전사아키텍처 구축</a> </p>
         <p> <a href="./study/study_0104.html">0104. 1-3 전사아키텍처 관리 및 활용</a> </p>
         <p> <a href="./study/study_0105.html">0105. 6-1. 데이터베이스 설계</a> </p>
+        <p> <a href="./study/study_0106.html">0106. 6-2. 데이터베이스 이용</a> </p>
         <br>
         
         <H4>22.06.25 SW자산관리사</H4>
