--- a/my/my_9997.html
+++ b/my/my_9997.html
@@ -42,6 +42,7 @@
     <body class="vscode-body vscode-light">
         <h1 id="투자원칙">투자원칙</h1>
 <p><strong>이길 수 있는 자리</strong>에서 투자하자</p>
+<p><strong>가치가 우샹향</strong>하는지를 판단하자. 가격을 계속 보면 너무 피곤해진다</p>
 
         
         
