--- a/study/study_0107.html
+++ b/study/study_0107.html
@@ -65,17 +65,19 @@
 <ul>
 <li>DBMS별로 유사</li>
 <li>Oracle : StatsPack(성능관련데이터수집,리포트), SQL트레이스(SQL의 통계치 및 대기 이벤트 수집, TKPROF로 리포트)</li>
-<li>IBM UDB : 스냅샹 모니터(스냅샹 취할때 DB 활동 상태), 이벤트 모니터(이벤트나 전이가 발생할 때), SQL 모니터링(액세스 플랜)</li>
+<li>IBM UDB : 스냅샷 모니터(스냅샷 취할때 DB 활동 상태), 이벤트 모니터(이벤트나 전이가 발생할 때), SQL 모니터링(액세스 플랜)</li>
+<li>SQL Server 2000 : NT성능모니터링(리소스관리), SQL프로필러(트레이스분석)</li>
 </ul>
 <br>
 <h3 id="나-조인join"><strong>나. 조인(Join)</strong></h3>
 <p>두 테이블 사이의 연결인 JOIN에 대해서 알아보아요</p>
 <br>
-<p>이떠한 방법으로 조인을 하더라도 결과값은 동일하지만, 성능상에서는 많이 차이가 발생 가능하다</p>
+<p>이떠한 방법으로 조인을 하더라도 결과값은 동일하지만, 성능상에서는 많은 차이 발생 가능</p>
 <p>Nested-Loop 조인</p>
 <ul>
+<li>한 쪽 테이블 순서대로 읽어가면서 반대쪽 테이블을 인덱스로 조회</li>
 <li>연결고리(조인 컬럼)에 인덱스가 있어야 한다</li>
-<li>출력 순서</li>
+<li>출력순서</li>
 <li>연결순서</li>
 <li>이용 : 인덱스필요, 처리량 적을 경우, 부분 범위 용이, 드라이빙 테이블 선택 중요</li>
 </ul>
@@ -94,18 +96,42 @@
 <li>Hash Area만으로 hash table 생성이 불충분하면 Hash Table Overflow 발생</li>
 <li>이용 : 대용량 데이터, 범위를 줄일 수 있을 때, 병행 처리로 속도 향상 가능할 때, 메모리 사이즈 조정해서 속도 향상 가능할때</li>
 </ul>
-<h3 id="다-애플리케이션-성능-개선"><strong>다. 애플리케이션 성능 개선</strong></h3>
-<p>데이터베이스가 이렇게 생겼어요</p>
 <br>
-<p>개념적 DBMS 아키텍처</p>
+<h3 id="다-애플리케이션-성능-개선"><strong>다. 애플리케이션 성능 개선</strong></h3>
+<p>온라인과 배치 프로그램 성능 향상 방안</p>
+<br>
+<p>온라인 프로그램 (응답시간 최소화)</p>
 <ul>
-<li>데이터베이스(데이터,임시,시스템,로그) + 인스턴스(메모리,프로세스)</li>
+<li>상수 사용 억제 : 파싱으로 인한 부하를 감소시키기 위해서 바인딩 변수 사용, 실행계획 미리 보관하고 있으나 상수 사용시 매번 파싱 필요(하드파싱)</li>
+<li>웹게시글 부분처리 : 데이터베이스와 지속적인 세션 가질 수 없음, 필요한 부분만 잘라서 읽음, 대상 건수 증가할수록 속도 떨어짐, 스크롤이 가능한 커서</li>
+<li>과도한 함수 사용 : 프로그램 편리성, DBMS 측면에서 비효율, 문맥전환에 따른 비효율(select 행만큼 함수 호출)</li>
+</ul>
+<p>대용량 데이터베이스 배치 프로그램 (처리시간 최소화)</p>
+<ul>
+<li>집합적인 처리 : 이중커서 대신 단일커서 사용(조인 등 활용), Hash 조인이나 풀 스캔이 더 나을 수도, 병행처리</li>
+<li>분석함수 : Ranking(rank, dense_rank,,,), Window(Running Summary, Moving Average,,,), Reporting(sum,,, stddev, variance), 오프셋(lead,lag)</li>
+<li>파티션 : 파티셔닝과 같은 스토리지 전략 필요할 수도</li>
 </ul>
 <br>
 <h3 id="라-서버-성능-개선"><strong>라. 서버 성능 개선</strong></h3>
-<p>메롱</p>
+<p>물리적인 방법으로 성능 개선을 수행하다</p>
 <br>
-<p>메롱2</p>
+<p>오브젝트 튜닝</p>
+<ul>
+<li>저장장치(블록,확장영역,세그먼트), 인덱스 재구성, IO 병목이 발생하지 않도록 재배치</li>
+</ul>
+<p>인스턴스 튜닝</p>
+<ul>
+<li>메모리, 프로세스 튜닝 (DBMS별 차이)</li>
+<li>Sort Area, Hash Area는 스와핑 발생하는지 확인 필요</li>
+<li>트랜잭션 처리를 위한 Latch 경합</li>
+</ul>
+<p>환경 튜닝</p>
+<ul>
+<li>CPU : 사용율 확인, SAR 모니터링시 (%usr &gt; %sys &gt; %wio)</li>
+<li>메모리 : 페이징 현상 확인(스와핑), 사용자 사용 메모리는 40~60% 수준</li>
+<li>IO : 물리적인 디스크와 디스크 채넌 분산, 읽기/쓰기 분산,</li>
+</ul>
 
         
         
