--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <p> <a href="./my/my_0120.html">0120. 부동산</a> </p>
         <p> <a href="./my/my_0130.html">0130. 투자</a> </p>
         <p> <a href="./my/my_9997.html">9997. 투자원칙</a> </p>
-        
+        <br>
+
         <p> <a href="./my/my_0200.html">0200. 노래</a> </p>
         <p> <a href="./my/my_0300.html">0300. 10분 요리</a> </p>
         <p> <a href="./my/my_0400.html">0400. MY BLOG</a> </p>
@@ -73,6 +74,7 @@
         <p> <a href="./study/study_0105.html">0105. 6-1. 데이터베이스 설계</a> </p>
         <p> <a href="./study/study_0106.html">0106. 6-2. 데이터베이스 이용</a> </p>
         <p> <a href="./study/study_0107.html">0107. 6-3. 데이터베이스 성능 개선</a> </p>
+        <p> <a href="./study/study_0108.html">0108. 5-1. 데이터 모델링 이해</a> </p>
         <br>
         
         <H4>22.06.25 SW자산관리사</H4>
