--- a/study/study_0101.html
+++ b/study/study_0101.html
@@ -41,7 +41,7 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="dasp-23년-시험일정">DASP 23년 시험일정</h1>
-<p><img src="./img/s0101.JPG" alt="23년 시험일정"></p>
+<p><img src="file:////Users/sk/MY/new2/new2/study/img/s0101.JPG" alt="23년 시험일정"></p>
 <br>
 <ol>
 <li>
@@ -63,6 +63,16 @@
 <p>데이터베이스 설계와 이용</p>
 </li>
 </ol>
+<br>
+<pre><code>블록, 확장영역, 세그먼트
+CKPT
+2PC
+드라이빙 테이블
+엔덱스 종류별 언제 사용하는지
+Latch 경합
+스크롤이 가능한 커서
+</code></pre>
+<br>
 <p><a href="https://www.youtube.com/watch?v=vCr6Frmritg&amp;list=PLQvqXcm97CTCa3KE90z0rhBQKlxpNhzCG">챗GPT에 모든 걸 맡기면 안 되는 이유 : 3PRO TV, 조봉한 깨봉수학 대표</a></p>
 
         
