잡다한 것들

--- a/my/my_9997.html
+++ b/my/my_9997.html
@@ -43,6 +43,11 @@
         <h1 id="투자원칙">투자원칙</h1>
 <p><strong>이길 수 있는 자리</strong>에서 투자하자</p>
 <p><strong>가치가 우샹향</strong>하는지를 판단하자. 가격을 계속 보면 너무 피곤해진다</p>
+<p>배당주 : 언제들어가도 된다.  현재 주가보다 미래 배당 안정성이 더 중요</p>
+<p>자금의 용도에 맞게 투자해라 (단기, 롱텀)</p>
+<p>직장인은 천천히 투자해야 한다. 뉴스에 따라 사는 것해서 이길 수 없다</p>
+<p>워렌버핏 : 주식(90%) 부동산(5%) 현금(5%)</p>
+<p>부의 순위 밀리지 않기 위해 투자 (통화량 팽창에 따른 부의 재분배)</p>
 
         
         
