--- a/my/my_9999.html
+++ b/my/my_9999.html
@@ -42,18 +42,31 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="무작정-경제-정리">무작정 경제 정리</h1>
+<p>경제 위기 방향</p>
+<ul>
+<li>채권 -&gt; 주식 -&gt; 부동산 -&gt; 실물</li>
+</ul>
+<h2 id="반도체-경기">반도체 경기</h2>
+<p>반도체 재고 줄이는중 ('22.5)</p>
+<ul>
+<li>보통 6~9개월이었는데, 이번에는 1~1.5년 예상 (적정 수준 이상 재고 가지고 있었음, 초호황이었음)</li>
+</ul>
+<p>지속적인 투자 필요한 산업, 투자를 하면 기존 사업의 수익성이 떨어짐</p>
+<p>감산은 앉은 자리에서 감각상각비를 날리는 것임</p>
+<br>
 <h2 id="선진국-은행-사태">선진국 은행 사태</h2>
 <p>전세계 은행이 촘촘히 연결되어 있음</p>
 <p>선진국보다 비선진국에서 추가적인 위기 가능성 있음</p>
 <p>CS 발행 영구채 : HSBC 많이 발행했고 유로존 3000억$ 발행</p>
 <p>부채비율 높은 은행/기업 위험</p>
-<p>시중자금이 단기 유동화 되어 있음</p>
+<p>시중자금이 단기 유동화 되어 있음 (은행보다는 MMF)</p>
 <br>
 <h2 id="금융위기-최용식-정책당국">금융위기 (#최용식, #정책당국)</h2>
 <p><strong>경제병리학</strong></p>
 <p>그 때와 다르게 <strong>정책 당국</strong>에서 시의적절하게 대응하고 있다</p>
 <p>SVB 등</p>
 <ul>
+<li>SNS의 발달로 엄청 빠른 속도의 인출 사태 발생(뱅크런) --&gt; 엄청 빠른 대응 필요</li>
 <li>본원통화 6% 자산동결 (3340억$)</li>
 <li>전액보장 말했지만, 아직 인출가능하지 않음. 예금보험공사 보증한 금액만 인출 가능</li>
 <li>신용파괴 효과 &lt;--&gt; 신용창조 효과</li>
@@ -88,6 +101,7 @@
 <p>미국 개인 자산이 주식에 많이 있기 때문에 주가 하락 가만히 두기 어려움</p>
 <p>중국, 사우디가 미국 국채 사는 것 주저함</p>
 <p>FED가 30% 가지고 있음</p>
+<p>위안화 국제화 위한 노력중 (브릭스, 사우디 등 중동)</p>
 <br>
 <h2 id="버블-국채위기">버블 (#국채위기)</h2>
 <p>국채에서 가장 버블이 많다.</p>
@@ -98,7 +112,7 @@
 <p>결정권자 : 의회를 거치거나, (미국의회, 유럽의회)</p>
 <p>남유럽위기 때 의회를 통하지 않고 중앙은행을 통하여 정책 펼침</p>
 <p>미실현손실이 엄청남</p>
-<p>'22.10 영국사태시 미국채 유동성 문제 있는 것 확인</p>
+<p>'22.10 영국사태시 미국채 유동성 문제 있는 것 확인 / 금융 시장 리스크 확인하니깐 금리를 못 올리고 돈을 풀더라</p>
 <p>4% 넘어가니깐 문제가 발생하네,,,</p>
 <br>
 <h2 id="토지의-통화-창출-부동산">토지의 통화 창출 (#부동산)</h2>
