--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <p> <a href="./study/study_0106.html">0106. 6-2. 데이터베이스 이용</a> </p>
         <p> <a href="./study/study_0107.html">0107. 6-3. 데이터베이스 성능 개선</a> </p>
         <p> <a href="./study/study_0108.html">0108. 5-1. 데이터 모델링 이해</a> </p>
+        <p> <a href="./study/study_0109.html">0109. 5-2. 개념 데이터 모델링</a> </p>
         <br>
         
         <H4>22.06.25 SW자산관리사</H4>
