--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <p> <a href="./study/study_0107.html">0107. 6-3. 데이터베이스 성능 개선</a> </p>
         <p> <a href="./study/study_0108.html">0108. 5-1. 데이터 모델링 이해</a> </p>
         <p> <a href="./study/study_0109.html">0109. 5-2. 개념 데이터 모델링</a> </p>
+        <p> <a href="./study/study_0110.html">0110. 5-3. 논리 데이터 모델링</a> </p>
         <br>
         
         <H4>개발</H4>
