--- a/study/study_0108.html
+++ b/study/study_0108.html
@@ -42,7 +42,7 @@
     <body class="vscode-body vscode-light">
         <h1 id="5-1-데이터-모델링-이해">5-1. 데이터 모델링 이해</h1>
 <h3 id="가-데이터-모델링-개요"><strong>가. 데이터 모델링 개요</strong></h3>
-<p>이렇게 하면 더 빠르게 활용할 수 있어요</p>
+<p>데이터모델링은 개념 - 논리 - 물리 모델링으로 구분돼요</p>
 <br>
 <p>데이터 모델링 정의</p>
 <ul>
