--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <p> <a href="./study/study_0108.html">0108. 5-1. 데이터 모델링 이해</a> </p>
         <p> <a href="./study/study_0109.html">0109. 5-2. 개념 데이터 모델링</a> </p>
         <p> <a href="./study/study_0110.html">0110. 5-3. 논리 데이터 모델링</a> </p>
+        <p> <a href="./study/study_0111.html">0111. 5-4. 물리 데이터 모델링</a> </p>
         <br>
         
         <H4>개발</H4>
