--- a/study/study_0109.html
+++ b/study/study_0109.html
@@ -132,6 +132,9 @@
 <p>그래서 핵심 엔터티가 뭔가?</p>
 <br>
 <p>엔터티</p>
+<ul>
+<li>관리하고자 하는 것인가, 면적을 가지고 있는가, 동질성 지녔는가, 독립성 가졌는가, 순수개체 또는 행위의 집합인가</li>
+</ul>
 <p>의미상 주어 정의</p>
 <ul>
 <li>본질식별자, 인조식별자</li>
@@ -147,10 +150,10 @@
 <p>집합 순수성</p>
 <ul>
 <li>단위 사물을 정의한 개체 or 어떤 활동의 행위 (입금, 계약 등), 혼용되면 릴레이션십</li>
-<li>사례. 납입자 : 고객 + 납입 (혼용)</li>
-<li>예외1. 릴레이션십 엔터티 : M:N : 1:M으로 변환 : 릴레이션십 엔터티 (제휴:association, 교차:intersection)</li>
-<li>예외2. 부분집합 : 기관 vs 금융기관, 금융기관(금융은 분류) vs 수납기관(수납은 행위)</li>
-<li>예외3. 배타적관계</li>
+<li>사례. 납입자 : 고객(개체) + 납입(액션)이 혼용된 상태임</li>
+<li>예외1. 릴레이션십 엔터티화 : M:N : 1:M으로 변환 : 릴레이션십 엔터티 (제휴:association, 교차:intersection)</li>
+<li>예외2. 부분집합 : 기관 vs 금융기관, 금융기관(금융은 분류) vs 수납기관(수납은 행위) : 금융기관은 부분집합을 상세하게 표현하기 위해서 금융이라는 단어를 사용한 것임</li>
+<li>예외3. 배타적관계 : 배송처(종류 다양 : 물류센터, 부서, 공사현장 등등), 다르지만 계속 종류가 늘어난다면 하나의 엔티로 만들는 것이 나을 수도 있음</li>
 </ul>
 <p>집합 동질성 : 집합에 들어갈 개체들의 동일한 성질 (사람만 vs 사람과법인까지)</p>
 <p>엔터티 명칭 : 교육과정 + 강사 --&gt; 교육일정 보다는 개설강좌(일정외에도 장소라든지 다른 정보들 들어가 있음)</p>
@@ -161,6 +164,43 @@
 <li>트레이드오프 : 명확성과 복잡성</li>
 </ul>
 <p>엔터티 통합과 분할</p>
+<ul>
+<li>엔터티 독립성 : 이미 정의된 다른 엔터티에 포함되는 것은 아닌지</li>
+<li>엔터티 분할/통합
+<ul>
+<li>상품과 고객처럼 완전 독립, 고객과 사원처럼 부분 포함, 사원과 임원처럼 완전 포함 관계</li>
+<li>1 포함, 2 분리, 3 별개로 구축</li>
+</ul>
+</li>
+<li>집합 동질성 확대를 통한 집합 통합 사례
+<ul>
+<li>보험회사 대리점 : 사원처리 관리 (실적관리 단위 : 보험인)</li>
+<li>통신회사 대리점 : 부서처럼 관리 (실적관리 단위 : 조직)</li>
+</ul>
+</li>
+<li>유연성 향상을 위한 통합 : 집합의 확장은 유연성과 단순성 증대시키나 지나친 확장은 집합 의미 희석화시킴</li>
+</ul>
+<br>
+<h3 id="마-관계-정의"><strong>마. 관계 정의</strong></h3>
+<p>관계를 정의해 볼까요</p>
+<br>
+<p>관계란 : 엔터티와 엔터티 사이의 관계</p>
+<p>관계 이해</p>
+<ul>
+<li>관계도 집합이다</li>
+<li>직접 관계를 관계라고 한다</li>
+<li>두 엔터티 간에는 하나 이상의 관계가 존재할 수 있다 : 계약자 / 피보험자</li>
+<li>외래키의 정의 : FK, 참조무결성</li>
+<li>관계의 관점</li>
+</ul>
+<p>관계 표현</p>
+<ul>
+<li>Degree/Cardinality : Many, only one</li>
+<li>Optionality : 주로 1쪽 필수, M쪽은 선택, 자식쪽의 정보가 없는 경우는 데이터 정합성의 문제 발생 가능</li>
+<li>관계명 : 각자의 입장에서 관계명 작성, 다른 관계명과 유일성은 확보 안됨, 현재시제로 업무적 연관성 표시 (부서에 포함한다. 직원은 소속된다)</li>
+</ul>
+<p>관계 정의 방법</p>
+<p>관계 형태</p>
 
         
         
