--- a/study/study_0110.html
+++ b/study/study_0110.html
@@ -75,7 +75,7 @@
 <ul>
 <li>수집처 : 구시스템 문서, 현업장표/보고서, 사용자협의, DFD의 DD, 전문서적, 다른 시스템</li>
 <li>선정원칙 : 버리지마라, 소그룹별로 후보군을 만들고 가장 근접한 엔터티에 할당</li>
-<li>구성요소 : 속성명, 도메인, 선택성</li>
+<li>구성요소 : 속성명(명칭 어떻게 할까요), 도메인(도메인 가지나요), 선택성(꼭 값을 가지나요)</li>
 </ul>
 <p>속성 검증 및  확정 (요구사항에 맞게 적용)</p>
 <ul>
@@ -126,16 +126,30 @@
 </ul>
 <p>참조 무결성 규칙 정의</p>
 <ul>
-<li>입력 : dependent(있는 경우만), automatioc(무조건 삽입), nullify(to null), default(to deau), customized(특정조건만족할경우만), no effect</li>
+<li>입력 : dependent(있는 경우만), automatioc(무조건 삽입), nullify(to null), default(to default), customized(특정조건만족할경우만), no effect</li>
 <li>삭제 : restrict(제한), cascade(다삭제), nullify, deault, cutomized, no effect</li>
 </ul>
 <br>
 <h3 id="라-이력-관리-정의"><strong>라. 이력 관리 정의</strong></h3>
-<p>블라</p>
+<p>선분 이력관리를 해 보아요</p>
 <br>
-<p>블라</p>
+<p>이력 관리 대상 선정</p>
 <ul>
-<li>블라블라</li>
+<li>종류 : 발생 이력(웹사이트 접근이력), 변경 이력(변경시마다), 진행 이력(주문상태)</li>
+<li>관리형태 : 시점이력(매일첫번째고시환율), 선분이력</li>
+<li>선분이력관리유형
+<ul>
+<li>인스턴스 : 스냅샷관리, 저장공간낭비, 찾기어려움</li>
+<li>속성 : 매우 분명하게 관리됨, 변화 가능성 낮고 항목 많을 때 유리</li>
+<li>주제 : 연동될 확률이 높은 것별로 인스턴스 레벨 관리,</li>
+</ul>
+</li>
+</ul>
+<p>선분 이력 관리용 식별자 확정</p>
+<ul>
+<li>성능고려하여 설계 필요</li>
+<li>점으로 처리시 유니크함 보존 힘듦 : 부서코드+시작일+종료일</li>
+<li>종료점이 NULL 처리시 속도 저하 우려, 최대치로 처리함</li>
 </ul>
 
         
