--- a/study/study_0111.html
+++ b/study/study_0111.html
@@ -67,7 +67,7 @@
 <ul>
 <li>엔터티 - 테이블</li>
 <li>속성 - 컬럼</li>
-<li>Primary UID - Primary Key</li>
+<li>Primary UID(Unique Identifier) - Primary Key</li>
 <li>Secondary(Alternate) UID - Unique Key</li>
 <li>Relationship - Foreign Key</li>
 <li>Business Constraints - Check Constraints</li>
