--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
         <p> <a href="./study/study_0109.html">0109. 5-2. 개념 데이터 모델링</a> </p>
         <p> <a href="./study/study_0110.html">0110. 5-3. 논리 데이터 모델링</a> </p>
         <p> <a href="./study/study_0111.html">0111. 5-4. 물리 데이터 모델링</a> </p>
+        <p> <a href="./study/study_0112.html">0112. 4-1. 데이터 표준화 개요</a> </p>
+        <p> <a href="./study/study_0113.html">0113. 4-2. 데이터 표준 수립</a> </p>
+        <p> <a href="./study/study_0114.html">0114. 4-3. 데이터 표준 관리</a> </p>
         <br>
         
         <H4>개발</H4>
