--- a/study/study_0112.html
+++ b/study/study_0112.html
@@ -41,6 +41,10 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="4-1-데이터-표준화-개요">4-1. 데이터 표준화 개요</h1>
+<p> <a href="./study/study_0112.html">0112. 4-1. 데이터 표준화 개요</a> </p>
+<p> <a href="./study/study_0113.html">0113. 4-2. 데이터 표준 수립</a> </p>
+<p> <a href="./study/study_0114.html">0114. 4-3. 데이터 표준 관리</a> </p>
+<br>
 <h3 id="가-데이터-표준화-개요"><strong>가. 데이터 표준화 개요</strong></h3>
 <p>데이터표준화 관리체계가 사전에 구축되어야지만 표준화가 원할히 수행된다</p>
 <br>
