--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
         <p> <a href="./study/study_0112.html">0112. 4-1. 데이터 표준화 개요</a> </p>
         <p> <a href="./study/study_0113.html">0113. 4-2. 데이터 표준 수립</a> </p>
         <p> <a href="./study/study_0114.html">0114. 4-3. 데이터 표준 관리</a> </p>
+        <p> <a href="./study/study_0115.html">0115. 2-1. 데이터 이해</a> </p>
+        <p> <a href="./study/study_0116.html">0116. 2-2. 데이터 구조 이해</a> </p>
+        <p> <a href="./study/study_0117.html">0117. 2-3. 데이터 관리 프로세스 이해</a> </p>
         <br>
         
         <H4>개발</H4>
