--- a/study/study_0113.html
+++ b/study/study_0113.html
@@ -41,6 +41,10 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="4-2-데이터-표준-수립">4-2. 데이터 표준 수립</h1>
+<p> <a href="./study/study_0112.html">0112. 4-1. 데이터 표준화 개요</a> </p>
+<p> <a href="./study/study_0113.html">0113. 4-2. 데이터 표준 수립</a> </p>
+<p> <a href="./study/study_0114.html">0114. 4-3. 데이터 표준 관리</a> </p>
+<br>
 <h3 id="가-데이터-표준화-원칙-정의"><strong>가. 데이터 표준화 원칙 정의</strong></h3>
 <p>원칙을 가지고서 표준화를 실시합시다</p>
 <br>
@@ -75,7 +79,7 @@
 </li>
 </ul>
 <h3 id="나-데이터-표준-정의"><strong>나. 데이터 표준 정의</strong></h3>
-<p>데이터표준화 관리체계가 사전에 구축되어야지만 표준화가 원할히 수행된다</p>
+<p>단어, 도메인/코드, 용어사전을 정의해 보아요</p>
 <br>
 <p>표준 단어 사전 정의</p>
 <ul>
@@ -90,10 +94,26 @@
 </ul>
 <p>표준 도메인 사전 정의</p>
 <ul>
-<li>표준성, 유일성, 업무지향성</li>
+<li>도메인은 여러 개의 하위 도메인을 가질 수 있고, 하나의 도메인은 여러 개의 도메인에 중복적으로 사용할 수 있다</li>
+<li>표준성, 유일성, 업무지향성(업무의특성반영)</li>
+<li>작성형식 : 도메인명, 정의, 데이터타입, 비고</li>
+<li>정의 : 현행 용어 정보 분석(용어명 중에서 끝쪽 단어 그룹핑) - 표준 도메인 정의</li>
 </ul>
 <p>표준 코드 사전 정의</p>
+<ul>
+<li>재사용성(자체 생성보다는 국제기구/정부 등에서 만든 것 활용), 일관성(전사차원 일관성, 중복배제), 정보분석성(가능한 코드화)</li>
+<li>표준화 팀에서 엄격한 기준에 따라 관리되어야 함</li>
+<li>작성형식 : 코드유형, 코드명, 코드구조, 코드번호, 코드값, 오너부서, 사용부서</li>
+<li>정의 : 현행코드수집(단독,통합코드테이블, 애플리케이션내, 코드성컬럼) - 현행코드상세분석(동인한지 통합가능성 있는지 검토) - 표준코드정의</li>
+<li>고려사항 : 확장성 고려, 코드값 변경시 기존 적용 코드는 사용중지하고 신규 코드 등록, 신구코드매핑</li>
+</ul>
 <p>표준 용어 사전 정의</p>
+<ul>
+<li>표준성(용어사용의 차이에 따라 발생하는 전사 차원 혼란 최소화), 일반성, 업무지향성</li>
+<li>작성형식 : 용어유형, 표준한글명, 표준영문명, 설명, 데이터타입, 표준도메인, 비고</li>
+<li>정의 : 용어에 대한 표준단어 도출 및 표준 용어 정의 - 도메인/코드 정의</li>
+<li>고려사항 : 허용길이확인, 한글명변경 또는 복합단어등록,</li>
+</ul>
 <br>
 <h3 id="다-데이터-표준-확정"><strong>다. 데이터 표준 확정</strong></h3>
 <p>표준화 내역을 검토하고 공표한다</p>
