--- a/study/study_0115.html
+++ b/study/study_0115.html
@@ -41,24 +41,80 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="2-1-데이터-이해">2-1. 데이터 이해</h1>
-<p> <a href="./study/study_0115.html">0115. 2-1. 데이터 이해</a> </p>
-<p> <a href="./study/study_0116.html">0116. 2-2. 데이터 구조 이해</a> </p>
-<p> <a href="./study/study_0117.html">0117. 2-3. 데이터 관리 프로세스 이해</a> </p>
+<p> <a href="./study_0115.html">0115. 2-1. 데이터 이해</a> </p>
+<p> <a href="./study_0116.html">0116. 2-2. 데이터 구조 이해</a> </p>
+<p> <a href="./study_0117.html">0117. 2-3. 데이터 관리 프로세스 이해</a> </p>
 <br>
 <h3 id="가-데이터-품질-관리-프레임워크"><strong>가. 데이터 품질 관리 프레임워크</strong></h3>
-<p>블라</p>
-<br>
-<p>블라블라</p>
+<table>
+<thead>
+<tr>
+<th></th>
+<th>데이터</th>
+<th>데이터 구조</th>
+<th>데이터 관리 프로세스</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>CIO/EDA(개괄적) <td colspan="3"> 데이터 관리 정책 </td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>DA(개념적)</td>
+<td>표준 데이터</td>
+<td>개념모델, 데이터참조모델</td>
+<td>표준관리, 요구사항관리</td>
+</tr>
+<tr>
+<td>Modeler(논리적)</td>
+<td>모델 데이터</td>
+<td>논리모델</td>
+<td>모델관리, 흐름관리</td>
+</tr>
+<tr>
+<td>DBA(물리적)</td>
+<td>관리 데이터</td>
+<td>물리모델, 데이터베이스</td>
+<td>데이터베이스관리</td>
+</tr>
+<tr>
+<td>User(운용적)</td>
+<td>업무 데이터</td>
+<td>사용자뷰</td>
+<td>활용관리</td>
+</tr>
+</tbody>
+</table>
 <br>
 <h3 id="나-표준-데이터"><strong>나. 표준 데이터</strong></h3>
-<p>블라</p>
-<br>
-<p>블라블라</p>
+<p>정의 및 관리 목적</p>
+<ul>
+<li>데이터의 품질 확보와 직결되는 요소</li>
+<li>데이터의 불일치나 오류 가능성 최소화 -&gt; 생산성 향상, 의사소통 원할하게, 데이터 통합 효율적 수행 가능</li>
+</ul>
+<p>세부 관리 대상</p>
+<ul>
+<li>표준 단어 사전 : 표준성, 참조가능성, 일반성, 대표성</li>
+<li>표준 도메인 사전 : 표준성, 유일성, 업무지향성</li>
+<li>표준 용어 사전 : 표준성, 유일성, 업무지향성</li>
+<li>표준 코드 : 재사용성, 일관성, 정보분석성</li>
+<li>데이터 표준 요소 : 데이터 관련 요소의 표준화 : 주제영역, 데이터베이스, 인덱스,,,</li>
+</ul>
+<p>표준 데이터 상관도
+<img src="file:////Users/sk/MY/new2/new2/study/img/s0115.gif" alt="s0115"></p>
 <br>
 <h3 id="다-모델-데이터"><strong>다. 모델 데이터</strong></h3>
-<p>블라</p>
-<br>
-<p>블라블라</p>
+<p>정의 및 관리 목적</p>
+<ul>
+<li>데이터 구조에 대한 최신 정보 유지, 전사 차원 데이터 모델 공유, 체계적인 변경 관리</li>
+</ul>
+<p>세부 관리 대상</p>
+<ul>
+<li>완전성, 일관성, 추적성(변경이력추적), 상호 연계성, 최신성, 호환성(다른 종류의 관리 데이터와도 호환)</li>
+</ul>
 <br>
 <h3 id="라-관리-데이터"><strong>라. 관리 데이터</strong></h3>
 <p>블라</p>
