--- a/study/study_0114.html
+++ b/study/study_0114.html
@@ -41,9 +41,9 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="4-3-데이터-표준-관리">4-3. 데이터 표준 관리</h1>
-<p> <a href="./study/study_0112.html">0112. 4-1. 데이터 표준화 개요</a> </p>
-<p> <a href="./study/study_0113.html">0113. 4-2. 데이터 표준 수립</a> </p>
-<p> <a href="./study/study_0114.html">0114. 4-3. 데이터 표준 관리</a> </p>
+<p> <a href="./study_0112.html">0112. 4-1. 데이터 표준화 개요</a> </p>
+<p> <a href="./study_0113.html">0113. 4-2. 데이터 표준 수립</a> </p>
+<p> <a href="./study_0114.html">0114. 4-3. 데이터 표준 관리</a> </p>
 <br>
 <h3 id="가-데이터-표준-관리"><strong>가. 데이터 표준 관리</strong></h3>
 <p>데이터 품질관리 파트에서 전체적인 개념과 절차를 확인하세요</p>
