--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <div> 
         <h3>BOOK</h3>
         <p> W 06.11 책15(100~114)</p>
-        <p> <a href="./book/book_0116.html">116. 제목 모름. 청년들에게</a> </p>
+        <p> <a href="./book/book_0116.html">116. 그러니까 아무말도 하지마세요</a> </p>
         <p> <a href="./book/book_0115.html">115. 아인슈타인이 들려주는 상대성원리 이야기</a> </p>
         <p> <a href="./book/book_0114.html">114. 나는 누구 인가</a> </p>
         <p> <a href="./book/book_0113.html">113. 마음 실험실</a> </p>
