--- a/study/study_0115.html
+++ b/study/study_0115.html
@@ -58,7 +58,7 @@
 </thead>
 <tbody>
 <tr>
-<td>CIO/EDA(개괄적) <td colspan="3"> 데이터 관리 정책 </td></td>
+<td>CIO/EDA(개괄적) <td colspan="3"> <center> 데이터 관리 정책</td>
 <td></td>
 <td></td>
 <td></td>
@@ -104,8 +104,7 @@
 <li>표준 코드 : 재사용성, 일관성, 정보분석성</li>
 <li>데이터 표준 요소 : 데이터 관련 요소의 표준화 : 주제영역, 데이터베이스, 인덱스,,,</li>
 </ul>
-<p>표준 데이터 상관도
-<img src="file:////Users/sk/MY/new2/new2/study/img/s0115.gif" alt="s0115"></p>
+<p><img src="./img/s0115.gif" alt="s0115,표준 데이터 상관도"></p>
 <br>
 <h3 id="다-모델-데이터"><strong>다. 모델 데이터</strong></h3>
 <p>정의 및 관리 목적</p>
@@ -145,7 +144,7 @@
 <li>관리방법 : 매핑정확한지 여부, 삭제된 정보 아닌지, 사용안하는 항목 아닌지, 변환규칙 필요한지 여부</li>
 </ul>
 </li>
-<li>품질 관리 데이터 : 풍질기준, 품질점검주기, 절차와 규침, 개선절차
+<li>품질 관리 데이터 : 품질기준, 품질점검주기, 절차와 규침, 개선절차
 <ul>
 <li>관리항목 : 엔터티 무결성, 참조 무결성, 도메인 무결성, 비즈니스 규칙, 트리거 등 사용자 정의 객체, 데이터복제시 정합성</li>
 </ul>
@@ -166,7 +165,7 @@
 </li>
 <li>운영 데이터 : 데이터베이스에 관리되는 데이터
 <ul>
-<li>정확성, 일관성, 최신성, 완전성, 사용용이서, 검색용이성</li>
+<li>정확성, 일관성, 최신성, 완전성, 사용용이성, 검색용이성</li>
 </ul>
 </li>
 <li>분석 데이터 : 운영데이터를 ETL(추출,변환,적재) 통해 구축
