--- a/study/study_0116.html
+++ b/study/study_0116.html
@@ -45,7 +45,7 @@
 <p> <a href="./study_0116.html">0116. 2-2. 데이터 구조 이해</a> </p>
 <p> <a href="./study_0117.html">0117. 2-3. 데이터 관리 프로세스 이해</a> </p>
 <br>
-<h3 id="가-개념-데이터-모델"><strong>가. 개념 데이터 모델</strong></h3>
+<h3 id="-가-개념-데이터-모델"><p style="color:red"> <strong>가. 개념 데이터 모델</strong></h3>
 <p>정의 및 관리 목적</p>
 <p>세부 관리 대상</p>
 <ul>
@@ -70,27 +70,43 @@
 <br>
 <h3 id="라-물리-데이터-모델"><strong>라. 물리 데이터 모델</strong></h3>
 <p>정의 및 관리 목적</p>
+<ul>
+<li>논리 데이터 모델을 DBMS의 특성 및 성능을 고려하여 구체화시킨 모델</li>
+<li>1:1로 물리 객체와 대응하지는 않음</li>
+</ul>
 <p>세부 관리 대상</p>
 <ul>
-<li>주제영역</li>
-<li>테이블</li>
-<li>관계</li>
-<li>컬럼</li>
+<li>주제영역 : 논리데이터모델의 주제영역은 물리모델의 스키마나 서버로 분리, 하나의 서버/스키마에서 테이블 명명규칙으로 구분될 수도 있음</li>
+<li>테이블 : 영속성(현재 그리고 미래에도 관리가 필요함), 식별성(하나 이상의 컬럼 보유)</li>
+<li>관계 : 생성규칙(자식 생성시 부모도 반드시 존재), 변경 및 삭제규칙(부모 변경(삭제)시 자식도 함께 또는 못함)</li>
+<li>컬럼 : 하나의 컬럼, 같은 데이터타입, 비슷한 유형 도메인 관리</li>
 </ul>
 <br>
 <h3 id="마-데이터베이스"><strong>마. 데이터베이스</strong></h3>
 <p>정의 및 관리 목적</p>
+<ul>
+<li>물리 데이터 모델을 구현한 결과물</li>
+<li>생성된 모든 객체들은 DBMS 자체의 데이터 사전에 관리</li>
+</ul>
 <p>세부 관리 대상</p>
 <ul>
-<li>저장공간</li>
-<li>테이블</li>
-<li>제약조건</li>
-<li>트리거</li>
-<li>DB링크</li>
-<li>프로시저</li>
-<li>뷰</li>
-<li>동의어</li>
-<li>롤</li>
+<li>저장공간 : 테이블과 인덱스를 정의하는 영역(테이블스페이스, 데이터파일)
+<ul>
+<li>안전성(다른 응용프로그램으로 보호, 별도 DB서버)</li>
+<li>보안성(허가받은 서버, 사용자만 접근)</li>
+<li>확장성(저장공간 확장이 충분하고 편리하게 수행되어야)</li>
+<li>성능보장</li>
+</ul>
+</li>
+<li>테이블 : 주기성(백업,성능확인), 다양성(분산전략,저장방식 등 다양), 보안성(테이블 또는 컬럼 단위 보안), 논리성(논리 데이터 모델 기반 변경 : 중복 배제)</li>
+<li>제약조건 : NOT NULL, Default, FK, Check</li>
+<li>인덱스 : 데이터 접근 속도 빠르게 하기 위해, 저장공간 낭비/속도 저하, b*트리 일반적, 주기적인 인덱스 리빌드</li>
+<li>트리거 : 테이블과 연계되어 미리 지정된 함수 수행, 신중하게 생성, 중복 생성 가능함으로 주의 필요(우선순위 지정 등 어려움 야기)</li>
+<li>DB링크 : 분산환경에서 하나의 서버처럼 사용, 제대로 연결되었는지 확인 필요, 성능저하 요인될 수도</li>
+<li>프로시저 : 잘못 사용할 경우 속도 저하 우려</li>
+<li>뷰 : 실제 물리적인 저장 공간 사용하지 않음, 접근제한/sql단순화 등 활용</li>
+<li>동의어 : 테이블 별명</li>
+<li>롤 : 권한그룹</li>
 </ul>
 <br>
 <h3 id="바-사용자-뷰"><strong>바. 사용자 뷰</strong></h3>
