--- a/study/study_0116.html
+++ b/study/study_0116.html
@@ -47,25 +47,42 @@
 <br>
 <h3 id="-가-개념-데이터-모델"><p style="color:red"> <strong>가. 개념 데이터 모델</strong></h3>
 <p>정의 및 관리 목적</p>
+<ul>
+<li>데이터의 주제영역과 핵심 데이터 집합을 정의하고 관계를 정의한 모델</li>
+<li>건축물의 조감도 역할</li>
+<li>개괄 데이터 모델 : 주제영역 관계도</li>
+</ul>
 <p>세부 관리 대상</p>
 <ul>
-<li>주제영역</li>
-<li>핵심 엔터티</li>
-<li>핵심 관계</li>
+<li>주제영역 : 원자성(다른 주제영역에 영향 안받음), 집중성(단위 주제영역에 집중), 업무지향성(업무적 명확성 표시하는 명칭)</li>
+<li>핵심 엔터티 : 집합성(엔터티 속성, 면적), 식별성(속성 Key), 영속성(영속적으로 존재해야 함), 사용성(업무 범위 내에서 반드시 사용해야 함), 관계성(다른 엔터티와 반드시 관계)</li>
+<li>핵심 관계 : 선택성(필수,선택), 형태성(1:1,1:M,N:M), 업무지향성(두 엔터티 사이에 상호 영향)</li>
 </ul>
 <br>
 <h3 id="나-데이터-참조-모델"><strong>나. 데이터 참조 모델</strong></h3>
 <p>정의 및 관리 목적</p>
+<ul>
+<li>데이터 참조 모델(DRM, Data Reference Model)</li>
+<li>재사용이 가능한 데이터 모델 (검증된 데이터 모델 참조, 시간/비용 절감), 공공의 경우 활성화 가능</li>
+</ul>
 <p>세부 관리 대상 (데이터참조모델)</p>
+<ul>
+<li>범용성(범용적으로 다양한 업무에 참조 가능), 단순성(복잡한 업무보다 단순한 업무가 참조에 용이), 표준성(일반적인 수준에서 이해될 수 있는 용어 사용), 정확성, 정보이용성(정의/관리규칙/속성정의 등도 참조), 분류성</li>
+</ul>
 <br>
 <h3 id="다-논리-데이터-모델"><strong>다. 논리 데이터 모델</strong></h3>
 <p>정의 및 관리 목적</p>
+<ul>
+<li>전체 데이터 모델에서 가장 핵심이 되는 모델</li>
+<li>논리 데이터모델에서 상세하게 관리되면 불필요한 데이터 중복을 방지할 수 있다</li>
+<li>이력 관리 필요, 명칭 표준화 필요(엔터티, 관계, 속성)</li>
+</ul>
 <p>세부 관리 대상</p>
 <ul>
-<li>주제영역</li>
-<li>엔터티</li>
-<li>관계</li>
-<li>속성</li>
+<li>주제영역 : 친밀도가 높은 데이터 집합을 하나의 주제영역으로, 개념모델 차용</li>
+<li>엔터티 : 완전성, 영속성, 식별성, 동질성(동질의 데이터가 모인 집합), 정규화(3차 정규화까지 실행)</li>
+<li>관계 : 선택성, 관계형태, 관계명칭(명시적일 경우 생략가능하나 가능하면 표기)</li>
+<li>속성 : 원자성(의미있는 최소 단위), 일관성(하나의 속성은 하나의 데이터만 관리), 무결성(참조시 데이터타입 동일), 정보성(의미있는 범위 내에 상세화 수준 결정)</li>
 </ul>
 <br>
 <h3 id="라-물리-데이터-모델"><strong>라. 물리 데이터 모델</strong></h3>
