--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
         <p> <a href="./study/study_0115.html">0115. 2-1. 데이터 이해</a> </p>
         <p> <a href="./study/study_0116.html">0116. 2-2. 데이터 구조 이해</a> </p>
         <p> <a href="./study/study_0117.html">0117. 2-3. 데이터 관리 프로세스 이해</a> </p>
+        <p> <a href="./study/study_0118.html">0118. 3-1. 정보 요구 사항 개요</a> </p>
+        <p> <a href="./study/study_0119.html">0119. 3-2. 정보 요구 사항 조사</a> </p>
+        <p> <a href="./study/study_0120.html">0120. 3-3. 정보 요구 사항 분석</a> </p>
+        <p> <a href="./study/study_0121.html">0121. 3-4. 정보 요구 검증</a> </p>
         <br>
         
         <H4>개발</H4>
