--- a/study/study_0109.html
+++ b/study/study_0109.html
@@ -41,6 +41,11 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="5-2-개념-데이터-모델링">5-2. 개념 데이터 모델링</h1>
+<p> <a href="./study_0108.html">0108. 5-1. 데이터 모델링 이해</a> </p>
+<p> <a href="./study_0109.html">0109. 5-2. 개념 데이터 모델링</a> </p>
+<p> <a href="./study_0110.html">0110. 5-3. 논리 데이터 모델링</a> </p>
+<p> <a href="./study_0111.html">0111. 5-4. 물리 데이터 모델링</a> </p>
+<br>
 <h3 id="가-개념-데이터-모델링-이해"><strong>가. 개념 데이터 모델링 이해</strong></h3>
 <p>핵심 엔터티로 구성 : 다른 집합의 존재 유무와 상관없이 존재</p>
 <p>모델링 기법은 논리적 모델링과 유사</p>
