--- a/study/study_0110.html
+++ b/study/study_0110.html
@@ -41,6 +41,11 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="5-3-논리-데이터-모델링">5-3. 논리 데이터 모델링</h1>
+<p> <a href="./study_0108.html">0108. 5-1. 데이터 모델링 이해</a> </p>
+<p> <a href="./study_0109.html">0109. 5-2. 개념 데이터 모델링</a> </p>
+<p> <a href="./study_0110.html">0110. 5-3. 논리 데이터 모델링</a> </p>
+<p> <a href="./study_0111.html">0111. 5-4. 물리 데이터 모델링</a> </p>
+<br>
 <h3 id="가-논리-데이터-모델링-이해"><strong>가. 논리 데이터 모델링 이해</strong></h3>
 <p>데이터 모델링이 최종적으로 완료된 상태</p>
 <p>목적 및 효과</p>
