--- a/study/study_0103.html
+++ b/study/study_0103.html
@@ -41,6 +41,10 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="1-2-전사아키텍처-구축">1-2 전사아키텍처 구축</h1>
+<p> <a href="./study_0102.html">0102. 1-1 전사아키텍처 개요</a> </p>
+<p> <a href="./study_0103.html">0103. 1-2 전사아키텍처 구축</a> </p>
+<p> <a href="./study_0104.html">0104. 1-3 전사아키텍처 관리 및 활용</a> </p>
+<br>
 <h3 id="가-전사아키텍처-방향-수립"><strong>가. 전사아키텍처 방향 수립</strong></h3>
 <p>EA 구축후에는 우리는 이렇게 갈꺼예요. 라고 이해관계자들과 방향성 공유</p>
 <br>
