--- a/study/study_0104.html
+++ b/study/study_0104.html
@@ -41,6 +41,10 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="1-3-전사아키텍처-관리-및-활용">1-3 전사아키텍처 관리 및 활용</h1>
+<p> <a href="./study_0102.html">0102. 1-1 전사아키텍처 개요</a> </p>
+<p> <a href="./study_0103.html">0103. 1-2 전사아키텍처 구축</a> </p>
+<p> <a href="./study_0104.html">0104. 1-3 전사아키텍처 관리 및 활용</a> </p>
+<br>
 <h3 id="가-전사아키텍처-관리-체계"><strong>가. 전사아키텍처 관리 체계</strong></h3>
 <p>(구축 이후) 전사아키텍처 정보를 관리하고 활용할 수 있는 체계를 정립하는 것</p>
 <br>
