--- a/study/study_0106.html
+++ b/study/study_0106.html
@@ -41,6 +41,10 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="6-2-데이터베이스-이용">6-2. 데이터베이스 이용</h1>
+<p> <a href="./study_0105.html">0105. 6-1. 데이터베이스 설계</a> </p>
+<p> <a href="./study_0106.html">0106. 6-2. 데이터베이스 이용</a> </p>
+<p> <a href="./study_0107.html">0107. 6-3. 데이터베이스 성능 개선</a> </p>
+<br>
 <h3 id="가-데이터베이스-관리-시스템dbms"><strong>가. 데이터베이스 관리 시스템(DBMS)</strong></h3>
 <p>데이터베이스가 이렇게 생겼어요</p>
 <br>
