--- a/study/study_0108.html
+++ b/study/study_0108.html
@@ -41,6 +41,11 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="5-1-데이터-모델링-이해">5-1. 데이터 모델링 이해</h1>
+<p> <a href="./study_0108.html">0108. 5-1. 데이터 모델링 이해</a> </p>
+<p> <a href="./study_0109.html">0109. 5-2. 개념 데이터 모델링</a> </p>
+<p> <a href="./study_0110.html">0110. 5-3. 논리 데이터 모델링</a> </p>
+<p> <a href="./study_0111.html">0111. 5-4. 물리 데이터 모델링</a> </p>
+<br>
 <h3 id="가-데이터-모델링-개요"><strong>가. 데이터 모델링 개요</strong></h3>
 <p>데이터모델링은 개념 - 논리 - 물리 모델링으로 구분돼요</p>
 <br>
