--- a/study/study_0111.html
+++ b/study/study_0111.html
@@ -41,6 +41,11 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="5-4-물리-데이터-모델링">5-4. 물리 데이터 모델링</h1>
+<p> <a href="./study_0108.html">0108. 5-1. 데이터 모델링 이해</a> </p>
+<p> <a href="./study_0109.html">0109. 5-2. 개념 데이터 모델링</a> </p>
+<p> <a href="./study_0110.html">0110. 5-3. 논리 데이터 모델링</a> </p>
+<p> <a href="./study_0111.html">0111. 5-4. 물리 데이터 모델링</a> </p>
+<br>
 <h3 id="가-물리-데이터-모델링-이해"><strong>가. 물리 데이터 모델링 이해</strong></h3>
 <p>DBMS의 특성을 고려하여 데이터베이스 저장구조로 변환됨</p>
 <ul>
