--- a/study/study_0109.html
+++ b/study/study_0109.html
@@ -205,7 +205,53 @@
 <li>관계명 : 각자의 입장에서 관계명 작성, 다른 관계명과 유일성은 확보 안됨, 현재시제로 업무적 연관성 표시 (부서에 포함한다. 직원은 소속된다)</li>
 </ul>
 <p>관계 정의 방법</p>
+<ul>
+<li>관계 구문 이해
+<ul>
+<li>&quot;엔터티1&quot;의 &quot;임의&quot;의 &quot;하나&quot;는 &quot;관계형태&quot; &quot;엔터티2&quot; 관계명이 &quot;관계사양&quot;한다.</li>
+<li>관계형태(Cardinality) : 하나가 몇 개의 상대방 가질 수 있는지</li>
+<li>관계사양(Optionality) : 필수(실선) vs 선택(점선)  /  반드시 vs 일 수도 있다.</li>
+</ul>
+</li>
+<li>관계 정의 절차
+<ul>
+<li>상세하게 다시 고민 필요 : 사원 - 부서 : 겸임 가능한지, 조직원 없는 부서 가능한지, 이전 소속도 알아야 하는지,,,</li>
+</ul>
+</li>
+</ul>
 <p>관계 형태</p>
+<ul>
+<li>1:1 :
+<ul>
+<li>필수:선택 :</li>
+<li>필수:필수 : 엔터티 수직 분할 시 많이 나타남</li>
+<li>선택:선택 :</li>
+</ul>
+</li>
+<li>M:1
+<ul>
+<li>가장 흔한 형태로 One Optional이거나 Both Side Optional이 대부분</li>
+</ul>
+</li>
+<li>M:M
+<ul>
+<li>양쪽 모두 Optional, 빈번하게 나타나지만 물리 모델로 바뀌면 사라짐</li>
+</ul>
+</li>
+<li>다중 관계 처리 (보험계약, 고객, (보험계약관련자:계약자,피보험자,수익자))
+<ul>
+<li>병렬식 : 테이블이 될 때마다 컬럼 추가 / 인덱스 증가, SQL 복잡 / 변경에 취약한 구조</li>
+<li>직렬식 : 새로운 엔터티 필요, 관계들이 Row 형태로 나타남</li>
+</ul>
+</li>
+<li>특수한 관계 형태 (순환 vs BOM : 부모가 1개 vs 여러개)
+<ul>
+<li>순환관계</li>
+<li>BOM : 부품과 조립규칙, 2개의 1:M 관계임</li>
+<li>Arc(mutually Exclusive) : 관계가 보통 동일하다, 하나의 엔터티에만 속해ㅇ 한다</li>
+</ul>
+</li>
+</ul>
 
         
         
