--- a/study/study_0117.html
+++ b/study/study_0117.html
@@ -58,8 +58,33 @@
 </ul>
 <p style="color:red"> 데이터 관리 프로세스 : 어떻게 정의해야 하나???
 <ul>
-<li>데이터 관리 프로세스</li>
-<li>데이터 관리 정책 수립 프로세스</li>
+<li>데이터 관리 프로세스
+<ul>
+<li>DQ1.1 요구 사항 정의</li>
+<li>DQ1.2 변경 계획 수립</li>
+<li>DQ2.1 데이터 관리 정책 수립</li>
+<li>DQ3.1 데이터 표준 정의</li>
+<li>DQ3.2 데이터 표준 변경</li>
+<li>DQ3.3 데이터 표준 평가</li>
+<li>DQ4.1 데이터 모델 정의</li>
+<li>DQ4.2 데이터 모델 변경</li>
+<li>DQ4.3 데이터 모델 평가</li>
+<li>DQ5.1 데이터 흐름 정의</li>
+<li>DQ5.2 데이터 흐름 평가</li>
+<li>DQ6.1 데이터베이스 정의</li>
+<li>DQ6.2 데이터베이스 변경</li>
+<li>DQ6.3 데이터베이스 평가</li>
+<li>DQ7.1 데이터 활용도 평가</li>
+<li>DQ7.2 데이터 활용도 개선</li>
+</ul>
+</li>
+<li>데이터 관리 정책 수립 프로세스
+<ul>
+<li>DQ2.1.1 데이터 관리 정책 수립</li>
+<li>DQ2.1.2 데이터 관리 정책 검토</li>
+<li>DQ2.1.3 데이터 관리 정책 공표</li>
+</ul>
+</li>
 </ul>
 <br>
 <h3 id="나-데이터-표준-관리"><strong>나. 데이터 표준 관리</strong></h3>
@@ -67,8 +92,32 @@
 <p>세부 관리 대상</p>
 <p>데이터 표준 관리 프로세스</p>
 <ul>
-<li>데이터 표준 관리 프로세스</li>
-<li>데이터 표준 개선 프로세스</li>
+<li>데이터 표준 관리 프로세스
+<ul>
+<li>DQ3.1.1 표준화 요구 사항 수립</li>
+<li>DQ3.1.2 표준화 원칙 수립</li>
+<li>DQ3.1.3 표준 단어 사전 정의</li>
+<li>DQ3.1.4 표준 도메인 사전 정의</li>
+<li>DQ3.1.5 표준 코드 정의</li>
+<li>DQ3.1.6 표준 용어 사전 정의</li>
+<li>DQ3.1.7 데이터 관련 요소 표준 정의</li>
+<li>DQ3.1.8 데이터 표준 검토</li>
+<li>DQ3.1.9 데이터 표준 공표</li>
+<li>DQ3.2.1 변경 요구 사항 검토</li>
+<li>DQ3.2.2 표준 변경 영향도 평가</li>
+<li>DQ3.2.3 표준 추가 및 변경</li>
+<li>DQ3.2.4 표준 등록 및 공표</li>
+</ul>
+</li>
+<li>데이터 표준 개선 프로세스
+<ul>
+<li>DQ3.3.1 데이터 표준-데이터 모델 매핑</li>
+<li>DQ3.3.2 데이터 표준 준수 체크</li>
+<li>DQ3.3.3 변경 영향도 분석</li>
+<li>DQ3.3.4 데이터 표준 미준수 원인 분석</li>
+<li>DQ3.3.5 데이터 정제</li>
+</ul>
+</li>
 </ul>
 <br>
 <h3 id="다-요구-사항-관리"><strong>다. 요구 사항 관리</strong></h3>
@@ -81,14 +130,41 @@
 <li>보안 개선 요건</li>
 </ul>
 <p>요구 사항 관리 프로세스</p>
+<ul>
+<li>DQ1.1.1 변경 요청</li>
+<li>DQ1.1.2 요구 사항 수렴</li>
+<li>DQ1.1.3 요구 사항 검토</li>
+<li>DQ1.2.1 변경 영향도 분석</li>
+<li>DQ1.2.2 공식화</li>
+<li>DQ1.2.3 변경 작업 계획 수립</li>
+</ul>
 <br>
 <h3 id="라-데이터-모델-관리"><strong>라. 데이터 모델 관리</strong></h3>
 <p>정의 및 관리 목적</p>
 <p>세부 관리 대상</p>
 <p>데이터 모델 관리 프로세스</p>
 <ul>
-<li>데이터 모델 관리 프로세스</li>
-<li>데이터 모델 개선 프로세스</li>
+<li>데이터 모델 관리 프로세스
+<ul>
+<li>DQ4.1.1 개념 데이터 모델</li>
+<li>DQ4.1.2 데이터 참조 모델 정의</li>
+<li>DQ4.1.3 논리 데이터 모델 정의</li>
+<li>DQ4.1.4 물리 데이터 모델 정의</li>
+<li>DQ4.2.1 개념 데이터 모델 변경</li>
+<li>DQ4.2.2 논리 데이터 모델 변경</li>
+<li>DQ4.2.3 물리 데이터 모델 변경</li>
+</ul>
+</li>
+<li>데이터 모델 개선 프로세스
+<ul>
+<li>DQ4.3.1 개념-논리 데이터 모델 매핑</li>
+<li>DQ4.3.2 논리-물리 데이터 모델 매핑</li>
+<li>DQ4.3.3 물리 데이터 모델-DB 매핑</li>
+<li>DQ4.3.4 개념-논리 데이터 모델 얼라인 분석</li>
+<li>DQ4.3.5 논리-물리 데이터 모델 얼라인 분석</li>
+<li>DQ4.3.6 물리 데이터 모델-DB 얼라인 분석</li>
+</ul>
+</li>
 </ul>
 <br>
 <h3 id="마-데이터-흐름-관리"><strong>마. 데이터 흐름 관리</strong></h3>
@@ -96,8 +172,27 @@
 <p>세부 관리 대상</p>
 <p>데이터 흐름 관리 프로세스</p>
 <ul>
-<li>데이터 흐름 관리 프로세스</li>
-<li>데이터 흐름 개선 프로세스</li>
+<li>데이터 흐름 관리 프로세스
+<ul>
+<li>DQ5.1.1 데이터 추출(변환) 요건 검토</li>
+<li>DQ5.1.2 소스 데이터 분석</li>
+<li>DQ5.1.3 소스 데이터 추출(변환) 설계</li>
+<li>DQ5.1.4 소스 데이터 추출(변환) 테스트</li>
+<li>DQ5.1.5 소스 데이터 추출(변환) 검증</li>
+<li>DQ5.1.6 소스 데이터 추출(변환) 모듈 반영</li>
+<li>DQ5.1.7 소스 데이터 추출(변환) 모니터링</li>
+</ul>
+</li>
+<li>데이터 흐름 개선 프로세스
+<ul>
+<li>DQ5.2.1 데이터 흐름 점검 기준 도출</li>
+<li>DQ5.2.2 데이터 하름 점검 지표 도출</li>
+<li>DQ5.2.3 데이터 정합성 체크</li>
+<li>DQ5.2.4 오류 데이터 분석</li>
+<li>DQ5.2.5 변경 영향 분석</li>
+<li>DQ5.2.6 데이터 정제</li>
+</ul>
+</li>
 </ul>
 <br>
 <h3 id="바-데이터베이스-관리"><strong>바. 데이터베이스 관리</strong></h3>
@@ -105,8 +200,28 @@
 <p>세부 관리 대상</p>
 <p>데이터베이스 관리 프로세스</p>
 <ul>
-<li>데이터베이스 관리 프로세스</li>
-<li>데이터베이스 개선 프로세스</li>
+<li>데이터베이스 관리 프로세스
+<ul>
+<li>DQ6.1.1 데이터베이스 생성</li>
+<li>DQ6.1.2 백업 주기 및 스케쥴 정의</li>
+<li>DQ6.1.3 데이터베이스 백업 수행</li>
+<li>DQ6.1.4 데이터 보안 대상 선정</li>
+<li>DQ6.1.5 데이터 보안 적용</li>
+<li>DQ6.1.6 데이터 보안 교육 수행</li>
+<li>DQ6.2.1 데이터베이스 성능 개선</li>
+<li>DQ6.2.2 데이터 보안 개선</li>
+<li>DQ6.2.3 데이터베이스 복구</li>
+<li>DQ6.2.4 테스트 데이터베이스 변경</li>
+<li>DQ6.2.5 운영 데이터베이스 이관</li>
+</ul>
+</li>
+<li>데이터베이스 개선 프로세스
+<ul>
+<li>DQ6.3.1 데이터베이스 객체 관리 효율성 체크</li>
+<li>DQ6.3.2 비효율 원인 분석</li>
+<li>DQ6.3.3 변경 영향도 분석</li>
+</ul>
+</li>
 </ul>
 <br>
 <h3 id="사-데이터-활용-관리"><strong>사. 데이터 활용 관리</strong></h3>
@@ -117,6 +232,15 @@
 <li>측정 방법</li>
 </ul>
 <p>데이터 활용 관리 프로세스</p>
+<ul>
+<li>DQ7.1.1 핵심 데이터 수집</li>
+<li>DQ7.1.2 데이터 활용도 측정 기준 수립</li>
+<li>DQ7.1.3 데이터 활용 측정</li>
+<li>DQ7.1.4 활용 저하 요인 분석</li>
+<li>DQ7.2.1 개선 방안 마련</li>
+<li>DQ7.2.2 개선 활동 수행</li>
+<li>DQ7.2.3 개선 활동 평가</li>
+</ul>
 
         
         
