DASP 오타수정중

--- a/study/study_0105.html
+++ b/study/study_0105.html
@@ -149,7 +149,7 @@
 <p>논리적으로 연관된 데이터베이스 (물리적으로 분산)</p>
 <ul>
 <li>장점 : 원격 데이터에 대한 의존도 감소, 서버 추가해 점진적 증가 용이</li>
-<li>단점 : 분산처리로 인한도 복잡도 증가, 개발 비용 증가, 통제 기능 취약, 오류 발생 가능성</li>
+<li>단점 : 분산처리로 인한 복잡도 증가, 개발 비용 증가, 통제 기능 취약, 오류 발생 가능성</li>
 </ul>
 <p>설계 목표 : 논리적으로 하나의 데이터 모델을 제공하기 위해 <strong>투명성</strong> 요구됨</p>
 <ul>
