--- a/study/study_0109.html
+++ b/study/study_0109.html
@@ -158,7 +158,7 @@
 <li>사례. 납입자 : 고객(개체) + 납입(액션)이 혼용된 상태임</li>
 <li>예외1. 릴레이션십 엔터티화 : M:N : 1:M으로 변환 : 릴레이션십 엔터티 (제휴:association, 교차:intersection)</li>
 <li>예외2. 부분집합 : 기관 vs 금융기관, 금융기관(금융은 분류) vs 수납기관(수납은 행위) : 금융기관은 부분집합을 상세하게 표현하기 위해서 금융이라는 단어를 사용한 것임</li>
-<li>예외3. 배타적관계 : 배송처(종류 다양 : 물류센터, 부서, 공사현장 등등), 다르지만 계속 종류가 늘어난다면 하나의 엔티로 만들는 것이 나을 수도 있음</li>
+<li>예외3. 배타적관계 : 배송처(종류 다양 : 물류센터, 부서, 공사현장 등등), 다르지만 계속 종류가 늘어난다면 하나의 엔터티로 만들는 것이 나을 수도 있음</li>
 </ul>
 <p>집합 동질성 : 집합에 들어갈 개체들의 동일한 성질 (사람만 vs 사람과법인까지)</p>
 <p>엔터티 명칭 : 교육과정 + 강사 --&gt; 교육일정 보다는 개설강좌(일정외에도 장소라든지 다른 정보들 들어가 있음)</p>
@@ -248,7 +248,7 @@
 <ul>
 <li>순환관계</li>
 <li>BOM : 부품과 조립규칙, 2개의 1:M 관계임</li>
-<li>Arc(mutually Exclusive) : 관계가 보통 동일하다, 하나의 엔터티에만 속해ㅇ 한다</li>
+<li>Arc(mutually Exclusive) : 관계가 보통 동일하다, 하나의 엔터티에만 속해야 한다</li>
 </ul>
 </li>
 </ul>
