--- a/study/study_0111.html
+++ b/study/study_0111.html
@@ -147,7 +147,12 @@
 <p>중복 테이블 생성</p>
 <ul>
 <li>집계 테이블 (Group By) : 일관성 유지(집계 vs 원본)</li>
-<li>진행 테이블 : 활용도 높도록 키 설정, 집계 테이블 역할도 가능토록 컬럼 설정</li>
+<li>진행 테이블
+<ul>
+<li>여러 테이블의 조인이 빈번히 발생하고 처리 범위가 넓을 때</li>
+<li>활용도 높도록 키 설정, 집계 테이블 역할도 가능토록 컬럼 설정</li>
+</ul>
+</li>
 </ul>
 <p>중복 컬럼 생성</p>
 <ul>
