--- a/study/study_0108.html
+++ b/study/study_0108.html
@@ -207,7 +207,29 @@
 <p>속성</p>
 <h3 id="라-데이터-모델링-표기법-이해"><strong>라. 데이터 모델링 표기법 이해</strong></h3>
 <p>바커 표기법</p>
+<ul>
+<li>Optionality : 관계(실선 / 점선), 속성에 #, *, O 표시</li>
+<li>Cardinality : 까치발같은 것 활용</li>
+<li>상속 : 엔터티 안에 엔터티</li>
+</ul>
 <p>I/E 표기법</p>
+<ul>
+<li>Optionality : 관계 표시할 때 O 표시</li>
+<li>Cardinality : 관계 표시할 때 까치발</li>
+<li>상속 : 중간에 연결 기호</li>
+</ul>
+<br>
+<h3 id="기타등등">기타등등</h3>
+<p>연쇄작용 : 어느 실체값의 작업되었을 때 다른 실체의 데이터값에 영향 미치는 것으로 <strong>무결성</strong>과 연관이 있다</p>
+<p>코드 테이블도 키 테이블로 보고 개녀 설계시 필요할 수도 있음(하위 엔터티 가지는 경우 : 복잡한 경우)</p>
+<p>개념설계시에는 예외사항 처리는 잠시 미루어 두세요.</p>
+<p>FK는 필수 컬럼 쪽에 생성하는 것이 맞다. (부모값, 왜냐하면 부모의 값에 따라 자식이 영향을 받으니깐, 자식은 바뀌더라도 부모에게는 영향이 없다)</p>
+<p>배타적 관계</p>
+<ul>
+<li>외래키 분리방법 : FK 사용 가능, 단 제약조건 추가해야 됨, 각 FK는 자기만 알 수 있으니깐, 다른 쪽에서 추가로 관계를 가지려고 할 때 막아야 함</li>
+<li>외래키 결합방법 : FK 사용 불가, 구분할 수 있는 추가적인 컬럼이 펼요, 별도 트리거를 생성을 통해 제약조건 처리해야 함</li>
+</ul>
+<p>자주 사용되는 줌복 테이블 유형으로는 <strong>집계</strong> 테이블과 <strong>진행</strong> 테이블이 있다</p>
 
         
         
