--- a/study/study_0105.html
+++ b/study/study_0105.html
@@ -51,7 +51,7 @@
 <p>테이블 구조</p>
 <ul>
 <li>Heap-Organized Table : 순서와 관계없이 데이터 저장</li>
-<li>Index Organized Table / Clustered Index Table : 인덱스 값의 순서대로 데이터 저장, 소량 데이터 랜덤 엑세스에 성능 향상</li>
+<li>Index Organized Table / Clustered Index Table : 인덱스 값의 순서대로 데이터 저장, 소량 데이터 랜덤 엑세스에 성능 향상, <strong>데이터 삽입할 때 많은 비용 지불</strong></li>
 <li>Partitioned Table : (범위, 해쉬, 리스트) 파티션별 저장, 삭제, 추가 등등</li>
 <li>External Table : 파일 데이터</li>
 <li>Temporary Table : 트랜잭션 또는 세션 단위, 공유 안됨</li>
@@ -94,7 +94,7 @@
 <p>실체 무결성 (PK, UK)</p>
 <ul>
 <li>기본키 제약 : NOT NULL, UNIQUE</li>
-<li>UNIQUE 제약 : 후보키 대상인 UK, NULL 가능, PK선언만으로 클러스터드 인덱스 테이블 구조 생성,</li>
+<li>UNIQUE 제약 : 후보키 대상인 UK, NULL 가능</li>
 <li>채번시 시퀀스(시리얼) 활용이 바람직함</li>
 </ul>
 <p>영역 무결성 (Domain)</p>
@@ -132,7 +132,7 @@
 <li>접근 경로 결정</li>
 <li>컬럼 조합 및 순서 결정
 <ul>
-<li>항상 사용, 등치(=), 분포도 좋은 것, order/group by</li>
+<li>항상 사용, <strong>등치(=)</strong>, 분포도 좋은 것, order/group by</li>
 </ul>
 </li>
 <li>적용 시험 : 의도된 실행계획으로 작동되는지, 다른 SQL문 영향도도 확인 필요</li>
@@ -201,8 +201,14 @@
 </ul>
 <p>데이터 접근 제어 기법</p>
 <ul>
-<li>임의통제(DAC) : 권한 위임 가능, 1단계:수평전파, 2단계이상:수직전파</li>
-<li>강제통제(MAC) : 객체에 보안 등급 부여, 사용자마다 인가된 등급에 따라 접근 가능</li>
+<li>임의적 접근통제(DAC, Discretionary) : 권한 위임 가능, 1단계:수평전파, 2단계이상:수직전파</li>
+<li>강제접 접근통제(MAC, Mandatory) :
+<ul>
+<li>주체와 객체를 보안 등급 중 하나를 부여</li>
+<li>읽기는 사용자의 등급이 접근하는 데이터의 객체의 등급과 <strong>같거나 높은 경우</strong>에만 허용</li>
+<li>수정 및 등록은 사용자의 등급이 기록하고자 하는 데이터의 객체의 등급과 <strong>같은 경우</strong>에만 허용</li>
+</ul>
+</li>
 </ul>
 
         
