조금씩조금씩

--- a/my/my_9997.html
+++ b/my/my_9997.html
@@ -41,6 +41,7 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="투자원칙">투자원칙</h1>
+<p>중국 대형마트 : 까르프는 살아남았는데, 최근에 팔렸다. WHY <strong>빅데이터</strong> 기반 경영에서 뒤쳤져서,,,</p>
 <p><strong>이길 수 있는 자리</strong>에서 투자하자</p>
 <p><strong>가치가 우샹향</strong>하는지를 판단하자. 가격을 계속 보면 너무 피곤해진다</p>
 <p>배당주 : 언제들어가도 된다.  현재 주가보다 미래 배당 안정성이 더 중요</p>
