--- a/study/study_0101.html
+++ b/study/study_0101.html
@@ -41,7 +41,7 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="dasp-23년-시험일정">DASP 23년 시험일정</h1>
-<p><img src="file:////Users/sk/MY/new2/new2/study/img/s0101.JPG" alt="23년 시험일정"></p>
+<p><img src="./img/s0101.JPG" alt="23년 시험일정"></p>
 <br>
 <ol>
 <li>
@@ -74,6 +74,11 @@ Latch 경합
 </code></pre>
 <br>
 <p><a href="https://www.youtube.com/watch?v=vCr6Frmritg&amp;list=PLQvqXcm97CTCa3KE90z0rhBQKlxpNhzCG">챗GPT에 모든 걸 맡기면 안 되는 이유 : 3PRO TV, 조봉한 깨봉수학 대표</a></p>
+<p><a href="https://www.youtube.com/watch?v=kqlKPbqynTw">김승호 회장 <strong>돈의속성</strong> 부자되는법(동기부여,5000억부자)</a></p>
+<ul>
+<li>재미 한국인 사업가, 스노우폭스, 한국에서 사장학 개론</li>
+<li>돈은 인격체 : 작은 돈 소중히</li>
+</ul>
 
         
         
