DASP 별도 페이지 구성

--- a/study/study_0101.html
+++ b/study/study_0101.html
@@ -48,7 +48,7 @@
 <p>전사아키텍처 이행</p>
 </li>
 <li>
-<p>데이터 품질 관리 이해</p>
+<p>데이터 품질 관리 이해 (DAP)</p>
 </li>
 <li>
 <p>데이터 요건 분석</p>
@@ -60,12 +60,16 @@
 <p>데이터 모델링</p>
 </li>
 <li>
-<p>데이터베이스 설계와 이용</p>
+<p>데이터베이스 설계와 이용 (DAP)</p>
 </li>
 </ol>
+<ul>
+<li>DASP : 필기 50*2(아키탁처,요건분석,표준화,모델링2)</li>
+<li>DAP : 필기 70(품질관리,모델링) + 주관식30(표준화+모델)</li>
+</ul>
 <br>
 <pre><code>블록, 확장영역, 세그먼트
-CKPT
+CKPT 
 2PC
 드라이빙 테이블
 엔덱스 종류별 언제 사용하는지
