--- a/study/study_0107.html
+++ b/study/study_0107.html
@@ -41,6 +41,8 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="6-3-데이터베이스-성능-개선">6-3. 데이터베이스 성능 개선</h1>
+<p> <a href="./study_dasp.html">DASP</a> </p>
+<p><strong><p> 6. 데이터베이스 설계와 이용</p></strong></p>
 <p> <a href="./study_0105.html">0105. 6-1. 데이터베이스 설계</a> </p>
 <p> <a href="./study_0106.html">0106. 6-2. 데이터베이스 이용</a> </p>
 <p> <a href="./study_0107.html">0107. 6-3. 데이터베이스 성능 개선</a> </p>
