--- a/study/study_0103.html
+++ b/study/study_0103.html
@@ -41,6 +41,8 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="1-2-전사아키텍처-구축">1-2 전사아키텍처 구축</h1>
+<p> <a href="./study_dasp.html">DASP</a> </p>
+<p><strong><p> 1장 전사아키텍처 이해</p></strong></p>
 <p> <a href="./study_0102.html">0102. 1-1 전사아키텍처 개요</a> </p>
 <p> <a href="./study_0103.html">0103. 1-2 전사아키텍처 구축</a> </p>
 <p> <a href="./study_0104.html">0104. 1-3 전사아키텍처 관리 및 활용</a> </p>
