--- a/study/study_0109.html
+++ b/study/study_0109.html
@@ -41,6 +41,8 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="5-2-개념-데이터-모델링">5-2. 개념 데이터 모델링</h1>
+<p> <a href="./study_dasp.html">DASP</a> </p>
+<p><strong><p> 5. 데이터 모델링</p></strong></p>
 <p> <a href="./study_0108.html">0108. 5-1. 데이터 모델링 이해</a> </p>
 <p> <a href="./study_0109.html">0109. 5-2. 개념 데이터 모델링</a> </p>
 <p> <a href="./study_0110.html">0110. 5-3. 논리 데이터 모델링</a> </p>
