--- a/study/study_0121.html
+++ b/study/study_0121.html
@@ -41,6 +41,8 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="3-4-정보-요구-검증">3-4. 정보 요구 검증</h1>
+<p> <a href="./study_dasp.html">DASP</a> </p>
+<p><strong><p> 3. 데이터 요건 분석</p></strong></p>
 <p> <a href="./study_0118.html">0118. 3-1. 정보 요구 사항 개요</a> </p>
 <p> <a href="./study_0119.html">0119. 3-2. 정보 요구 사항 조사</a> </p>
 <p> <a href="./study_0120.html">0120. 3-3. 정보 요구 사항 분석</a> </p>
