--- a/study/study_0101.html
+++ b/study/study_0101.html
@@ -63,9 +63,10 @@
 <p>데이터베이스 설계와 이용 (DAP)</p>
 </li>
 </ol>
+<p>시험정보</p>
 <ul>
-<li>DASP : 필기 50*2(아키탁처,요건분석,표준화,모델링2)</li>
-<li>DAP : 필기 70(품질관리,모델링) + 주관식30(표준화+모델)</li>
+<li>DASP : 필기 50*2(아키탁처,요건분석,표준화,모델링2) (1시간 30분, 30분이후 퇴실 가능)</li>
+<li>DAP : 필기 70(품질관리,모델링) + 주관식30(표준화+모델) (4시간, 30분 이후 화장실 가능)</li>
 </ul>
 <br>
 <pre><code>블록, 확장영역, 세그먼트
