--- a/my/my_9999.html
+++ b/my/my_9999.html
@@ -150,6 +150,12 @@
 <p>젊은 세대들이 많아서 트랜드 읽기 좋음</p>
 <p>10개국가 다양성 추구 : EU보다 통합되기 어렵다. 바다로 갈라져 있음</p>
 <p>만장일치, 소지역협력체(메콩강협의체)</p>
+<br> 
+<h2 id="몰라몰라">몰라몰라</h2>
+<p>2008년 이후 돈이 실물로 안 들어가고 금융권에서 돌아다님</p>
+<p>월가 출신 재무장관 다수</p>
+<p>약한 나라일수록 규제를 통해 거품 안끼게 해야 함</p>
+<p>민간은 적자를 감수하고 투자를 안하기 때문에 정부에서 해줘야 한다</p>
 
         <script async src="https://cdn.jsdelivr.net/npm/katex-copytex@latest/dist/katex-copytex.min.js"></script>
         
