--- a/study/study_0108.html
+++ b/study/study_0108.html
@@ -221,6 +221,8 @@
 <li>상속 : 중간에 연결 기호</li>
 </ul>
 <br>
+<br>
+<br>
 <h3 id="기타등등">기타등등</h3>
 <p>연쇄작용 : 어느 실체값의 작업되었을 때 다른 실체의 데이터값에 영향 미치는 것으로 <strong>무결성</strong>과 연관이 있다</p>
 <p>코드 테이블도 키 테이블로 보고 개녀 설계시 필요할 수도 있음(하위 엔터티 가지는 경우 : 복잡한 경우)</p>
@@ -232,6 +234,11 @@
 <li>외래키 결합방법 : FK 사용 불가, 구분할 수 있는 추가적인 컬럼이 펼요, 별도 트리거를 생성을 통해 제약조건 처리해야 함</li>
 </ul>
 <p>자주 사용되는 줌복 테이블 유형으로는 <strong>집계</strong> 테이블과 <strong>진행</strong> 테이블이 있다</p>
+<p>(321) 병행제어, 고장회복</p>
+<p>(328) Non-Repeatable Read (동일건 2번 읽음, 공유잠김)  /   Phantom Read (공유잠김만으론 안됨, Range Lock)</p>
+<p>(338) Index Merge를 위해서는 둘 다 &quot;=&quot;이어야 함</p>
+<p>(175) 아크 : 다수의 아크는 가능, 하나의 엔터티에만 속해야 함</p>
+<p>(199) 개념 설계 단계 : 모르는 것을 확실하게 정리하고 넘어가야 함</p>
 
         
         
