--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div> 
         <h3>Docu</h3>
         <p> <a href="./docu/docu_0011.html">0011. 메가스터디, 손주은, 삼프로TV </a> </p>
-
+        <br>
         <p> <a href="./docu/docu_0001.html">0001. 다이어트 혁명 (EBS 다큐프라임)</a> </p>
         <p> <a href="./docu/docu_0002.html">0002. 시험 (EBS 다큐프라임) (18.06.06) </a> </p>
         <p> <a href="./docu/docu_0003.html">0003. 4차인간 (EBS 다큐프라임) (18.06.09) </a> </p>
@@ -260,6 +260,7 @@
     <div> 
         <h3>BOOK</h3>
         <p> 23.05.01 50권/년 ^^</p>
+        <p> <a href="./book/book_0118.html">118. 무조건 당신편</a> </p>
         <p> <a href="./book/book_0117.html">117. 너는 사람들을 도와주며 살고 싶니?</a> </p>
         <br>
         <p> W 06.11 책15(100~114)</p>
