--- a/book/book_0118.html
+++ b/book/book_0118.html
@@ -226,6 +226,111 @@
 <li>시간을 좀 두고 서두르지 않으면서 세심하게 나를 돌봐주니 참 좋다 (작가가 이발할때)</li>
 <li>전문가로써 빨리 끝내려고만 한 것이 아닌지? 받아들이는 사람은 어떻게 느꼈을까?</li>
 </ul>
+<p><br><br></p>
+<h2 id="3장-상처가-거름이-되려면">3장 상처가 거름이 되려면</h2>
+<h3 id="마른-장작에서-젖은-장작으로">마른 장작에서 젖은 장작으로</h3>
+<ul>
+<li>리질리언스 : 회복력</li>
+<li>시스템의 내외부의 충격으로 인해 발생하는 불안정성을 극복하게 시스템 기능을 회복하는 능력</li>
+<li>심리적 회복력을 악회사키는 원인으로는 만성질환, 가난, 부모와 어릴적부터 떨어져 산 것, 가정폭력 등에 따른 스트레스</li>
+<li>사회적 자본(친밀한 인간관계 정도)이 넉넉한 사람은 비록 경제적으로 좀 어려워지더라도 쉽사리 우을증 등 스트레스 질환에 빠져들지 않는다</li>
+</ul>
+<h3 id="금세-딛고-일어서는-사람들">금세 딛고 일어서는 사람들</h3>
+<ul>
+<li>타고난 성격이든 혹은 훈련에 의한 것이든 간에 우리의 회복력을 강하게 해주는 요인</li>
+<li>우수한 문제 해결 능력
+<ul>
+<li>일상에서 마주치는 수많은 문제들은 잘 해결해 나가는 융통성 있는 자세, 삶의 태도</li>
+</ul>
+</li>
+<li>낙관주의
+<ul>
+<li>낙관주의 &lt;--&gt; 염세주의</li>
+<li>세상에 대한 기대 : 내가 노력한만큼 돌아온다는 믿음</li>
+</ul>
+</li>
+<li>높은 자기 효능감
+<ul>
+<li>어떤 상황에서건 자신이 적절한 행동을 할 수 있을 거라는 기대와 신념</li>
+<li>가장 먼저 인정해줘야 할 사람은 다름 아닌 나</li>
+</ul>
+</li>
+<li>공감능력
+<ul>
+<li>이런저런 가정을 하면서 상대방 마음 이해</li>
+</ul>
+</li>
+<li>받아들이는 능력
+<ul>
+<li>나의 단점과 장점을 있는 그대로 받아들이는 것</li>
+</ul>
+</li>
+<li>가정과 사회에서 받는 지지
+<ul>
+<li>지금 당장 너무 힘들다면 우선 나부터 나를 챙기고 지지해 주면 됩니다</li>
+<li><strong>주변 사람을 지지해 주는 것</strong> 역시도 자존감을 높이는데 도움이 됩니다</li>
+</ul>
+</li>
+<li>긍정적인 인간관계
+<ul>
+<li>(동료) 그 일을 하는 동안 각자 자기 할 일을 잘하는 것이 건강한 관계의 기본 조건</li>
+</ul>
+</li>
+</ul>
+<h3 id="외상-후-성장의-비밀">외상 후 성장의 비밀</h3>
+<ul>
+<li>외상후 스트레스 &lt;--&gt; 외상후 성장</li>
+<li>그저 이전 수준으로 회복한 것을 넘어 무언가 더욱 좋은 쪽으로 훌쩍 성장한 상태</li>
+</ul>
+<h3 id="나를-지키는-용기">나를 지키는 용기</h3>
+<ul>
+<li>제노비스 증후군 : 방관자 효과</li>
+<li>주위에 사람들이 많을수록 책임감이 분산되어 어려움에 처한 사람을 돕지 않게 되는 현상</li>
+<li>특정인을 구체적으로 지목해서 도움 요청</li>
+<li>대부분의 사람들은 말로 직접 듣지 않으면 상대의 상태를 알아채지 못합니다</li>
+</ul>
+<h3 id="우울한-친구에게-무슨-말을-해줄까">우울한 친구에게 무슨 말을 해줄까</h3>
+<ul>
+<li>지금 가장 힘들게 무엇인지 물어봐도 될까?</li>
+<li>어떻게 하면 내가 너에게 도움이 될 수 있을까?</li>
+</ul>
+<h3 id="모두와-친하게-지내지-않아도">모두와 친하게 지내지 않아도</h3>
+<ul>
+<li>일로 만난 사이를 일반적인 인간과계와 비교해선 안 됩니다. (어느 정도의 예의를 지키며 일하는 데 방해되지 않는 선)</li>
+</ul>
+<h3 id="부드럽지만-단호하게-하는-말">부드럽지만 단호하게 하는 말</h3>
+<ul>
+<li>행동 대신 말로 해주세요.</li>
+<li>부드럽지만 단호헤게 말할줄 알아야 합니다.</li>
+</ul>
+<h3 id="미래-기억을-단련하는-법">미래 기억을 단련하는 법</h3>
+<ul>
+<li>미래기억 : 전두엽, 무언가를 하고자 할 때 앞으로 할 일들을 순서대로 정리해 머리속에 넣어 두는 능력</li>
+</ul>
+<h3 id="늘-실패를-계획할-것">늘 실패를 계획할 것</h3>
+<ul>
+<li>목표가 이뤄지지 않는다고 해서 죽을 것처럼 생각하지 마라</li>
+</ul>
+<h3 id="마음에게도-헬스-트레이너가-필요해">마음에게도 헬스 트레이너가 필요해</h3>
+<ul>
+<li>도저히 혼자 고치지 못할 것 같을 때</li>
+</ul>
+<h3 id="스마트한-마음-건강-관리법">스마트한 마음 건강 관리법</h3>
+<ul>
+<li>마음 일기쓰기</li>
+<li>편안한 음악 듣기</li>
+<li>호흡 훈련하기</li>
+<li>긴장 이완법 배우기</li>
+</ul>
+<h3 id="심리학"><strong>심리학</strong></h3>
+<p> <a href="./book_0118.html">118. 무조건 당신편</a> </p>
+<p> <a href="./book_0113.html">113. 마음 실험실</a> </p>
+<p> <a href="./book_0108.html">108. 서른살이 심리학에게 묻다</a> </p>
+<p> <a href="./book_0102.html">102. 자제력 수업</a> </p>
+<p> <a href="./book_0095.html">095. 자존감의 여섯 기둥</a> </p>
+<p> <a href="./book_0027.html">027. 욱하는 성질 죽이기</a> </p>
+<p> <a href="./book_0026.html">026. 백곰 심리학</a> </p>
+<p> <a href="./book_0019.html">019. 가족의 두 얼굴</a> </p>
 
         
         
