--- a/book/book_0118.html
+++ b/book/book_0118.html
@@ -91,8 +91,8 @@
 <ul>
 <li>울분 : 사회적으로 공정하지 않다는 생각이나 정의롭지 못하다는 느낌 (만성 실직, 만성 질환 등)</li>
 <li>한국의 '한'과는 차이가 있음, 억울한 감정이 오래 지속되어 돌덩이처럼 굳은 상태, 복수보다는 포기에 가까운 상태</li>
-<li>공통점 : 분노를 느끼는 대상을 용서하지 않으면 해소되는 않늠 감정</li>
-<li>마음을 보듬어 상처입은 자리에 새 사이 돋아나게 하고, 그렇게 돋아난 새 마음이 성숙해지고 성장하도록 돕고 기다려야 한다</li>
+<li>공통점 : 분노를 느끼는 대상을 용서하지 않으면 해소되는 않는 감정</li>
+<li>마음을 보듬어 상처입은 자리에 새 살이 돋아나게 하고, 그렇게 돋아난 새 마음이 성숙해지고 성장하도록 돕고 기다려야 한다</li>
 </ul>
 <br>
 <p>공포에 질리거나 분노에 휩싸이는 등 감정에 압도당하게 되면 미처 이성에 다다르지 못하고 감정에 의해 순간적인 판단과 행동을 하게 됩니다</p>
@@ -201,7 +201,7 @@
 </li>
 <li>재충전을 위한 작은 행복을 추구하기
 <ul>
-<li>무언가 즉가적이고 말초적인 것 말고,,,</li>
+<li>무언가 즉각적이고 말초적인 것 말고,,,</li>
 </ul>
 </li>
 <li>내 삶의 대의명분 잊지 않기
@@ -231,8 +231,8 @@
 <h3 id="마른-장작에서-젖은-장작으로">마른 장작에서 젖은 장작으로</h3>
 <ul>
 <li>리질리언스 : 회복력</li>
-<li>시스템의 내외부의 충격으로 인해 발생하는 불안정성을 극복하게 시스템 기능을 회복하는 능력</li>
-<li>심리적 회복력을 악회사키는 원인으로는 만성질환, 가난, 부모와 어릴적부터 떨어져 산 것, 가정폭력 등에 따른 스트레스</li>
+<li>시스템의 내외부의 충격으로 인해 발생하는 불안정성을 극복하여 시스템 기능을 회복하는 능력</li>
+<li>심리적 회복력을 악회사키는 원인으로는 만성질환, 가난, 부모와 어릴적부터 떨어져 산 것, 가정폭력 등에 따른 축적된 스트레스</li>
 <li>사회적 자본(친밀한 인간관계 정도)이 넉넉한 사람은 비록 경제적으로 좀 어려워지더라도 쉽사리 우을증 등 스트레스 질환에 빠져들지 않는다</li>
 </ul>
 <h3 id="금세-딛고-일어서는-사람들">금세 딛고 일어서는 사람들</h3>
